--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,30 +1,19 @@
 ---
-title: 12/27每日播报｜前英国内阁大臣的中国妻子被指粉饰中共暴行
+title: 中共区别对待历史事实
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1794931/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795048/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61b85c7e56f4921401b77b8b)**
+作者：东京樱花团丨阿恩
+![](https://lh5.googleusercontent.com/4TOOfbakyUw7UD0o4Bc4-uQ5eashK9jGSYWGjMUCQeFVYf2EM8W8oB5B9liYABALkhpciZ6TRh43jA7qOx_CaUZInZ5Q4rQ09O_1z3o2Ih_6cGp2d1oWPFpfj-Ti66ewV0r4ruNQ)[*图片来源*](https://www.thestandnews.com/politics/ab%E8%A2%AB%E4%BA%94%E5%BA%A6%E8%BF%BD%E5%95%8F%E5%A4%A7%E5%AD%B8%E6%8B%86%E9%99%A4%E5%85%AD%E5%9B%9B%E5%B1%95%E5%93%81-%E5%B6%BA%E5%A4%A7%E5%8D%94%E7%90%86%E5%89%AF%E6%A0%A1%E9%95%B7%E5%80%99%E4%BB%BB%E7%AB%8B%E6%B3%95%E6%9C%83%E8%AD%B0%E5%93%A1%E5%8A%89%E6%99%BA%E9%B5%AC%E6%88%91%E5%94%94%E4%BF%82%E5%A5%BD%E6%83%B3%E8%A9%95%E8%AB%96)
+岭南大学的六四浮雕和校内的民主女神像壁画上周五被除去，岭大协理副校长刘智鹏称，学校有自己的物品管理制度，并称不知道这个展品对于中国历史的认识有多大作用。被记者问及有小学上月按教育局的建议，在向小一学生播放日军处决百姓、婴幼儿尸横遍野的片段导致恐慌。刘智鹏却称，历史教育最基本的是展示事实，是唯一要遵守的原则。
 
-**2021-12-27**
+历史是不可更改的事实，是后人对前人作为的借鉴和指引，但中共却将历史当成为巩固政权的工具。六四运动和国内的舆论被中共血腥镇压，香港的大学成为存放六四展品的基地，民主的种子也在香港生根发芽。97后中共对香港民主活动的管制愈发严格，直至反逃犯条例运动后，中共全面禁止港人参与六四纪念活动，并再次将六四定性为“暴动”。中共享港区国安法为各种行为冠以危害国家安全的罪名，大学校园成为清理民主思潮的重点，代表捍卫民主的六四浮雕、壁画和民主墙首当其冲成为被清理的对象。这段追求民主的历史被中共扼杀，南京大屠杀的历史却被中共断章取义地在校园播放，中共截取了最血腥的坑杀场面吓得一年级的孩子嚎啕大哭，教育局、港府和学校则互推卸责任，丑态百出。同为历史事实，一个被扼杀，一个被长期宣扬，中共制造对外民族仇恨的伎俩在内地屡试不爽，但在香港却大失预算，港版粉红大军的建设“任重道远”，香港的孩子们将难逃中共魔爪。
 
-据英国《每日邮报》（Daily Mail）12月25日报道，前英国卫生和外交大臣杰里米·亨特（Jeremy Hunt）的中国妻子露西亚·郭（Lucia Guo）在中共官媒的一档专题节目担任主持人，她被指控替中共“洗白”其人权侵犯行为。
+资料来源：[**被五度追问大学拆除六四展品  岭大协理副校长、候任立法会议员刘智鹏：我唔系好想评论**](https://www.thestandnews.com/politics/ab%E8%A2%AB%E4%BA%94%E5%BA%A6%E8%BF%BD%E5%95%8F%E5%A4%A7%E5%AD%B8%E6%8B%86%E9%99%A4%E5%85%AD%E5%9B%9B%E5%B1%95%E5%93%81-%E5%B6%BA%E5%A4%A7%E5%8D%94%E7%90%86%E5%89%AF%E6%A0%A1%E9%95%B7%E5%80%99%E4%BB%BB%E7%AB%8B%E6%B3%95%E6%9C%83%E8%AD%B0%E5%93%A1%E5%8A%89%E6%99%BA%E9%B5%AC%E6%88%91%E5%94%94%E4%BF%82%E5%A5%BD%E6%83%B3%E8%A9%95%E8%AB%96)
 
-这家中共官媒是中国国际电视总公司（China International TV Corporation），它与位于英国的媒体公司Dove Media以及中国驻伦敦旅游办事处联合制作了一个名为《China Hour》的系列节目。该节目在英国天空电视台（Sky TV）播出，旨在向英国观众展示中国文化。Dove Media是世界华文传媒合作论坛（Global Chinese Media Co-operation Forum）的一部分。
-
-五年前，时任英国卫生大臣杰里米·亨特率领一个代表团访问中共国。该访问达成了一项协议，其中包括中英媒体联合制作节目、在天空191频道播放《China Hour》。《China Hour》播出的专题报告节目包括中共政府有效地应对了中共病毒大流行病以及新疆地区的美景，却没有提及该地区关押和迫害维吾尔穆斯林的再教育营地。
-
-现在担任英国下议院卫生与社会保健特别委员会（health and social care select committee）主席的杰里米·亨特，在2008年与当时正在为华威商学院 (University of Warwick) 招收中国学生的露西亚·郭相识。露西亚·郭来自中国西安市，现在与杰里米·亨特育有三个孩子。她在《China Hour》中主持了一个名为《花开中国》（Signature Flowers of China）的专题节目，该节目自今年9月开始播出。
-
-设在美国的人权研究机构自由之家 (Freedom House)在去年指控《China Hour》节目是中共国际媒体网络的一部分。在北京，该节目因其收视率而受到赞扬，而其关于中共病毒流行病的报道被认为“在向世界传达中共对该流行病的叙事方面发挥了独特作用”。但是自由之家的高级研究分析员莎拉·库克 (Sarah Cook)说，像《China Hour》这样的节目被用来帮助中共政权粉饰其侵犯人权行为。她说，“中共官媒参与制作了这些节目，并将其嵌入到中共官媒其它无害的节目中，这就是其阴险之处。已有许多观众观看了这些内容，但它实际上是在粉饰一个可怕的专制和残暴政权。”
-
-秘翻新闻主编 巴拉克 编译报导
-
-发布：文小明
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2021/12/招募-1.jpg)
+*校对：东京樱花团 / 文小白*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
