--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,43 +1,35 @@
 ---
-title: 49岁编辑注射莫德纳加强剂后一天去世
+title: 西双版纳因疫情封城，大批游客被迫滞留
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1794901/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1794940/)
 
-编译： Jenny Ball
+撰稿：纽约香草山教育部-Noemi
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+据中共国官方消息，云南西双版纳州景洪市自当地时间12月27日零时起实施全城疫情封控政策，大批游客被迫滞留。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image0-6-11.jpg)图片来源：thenationalpulse.com
+据了解，景洪市目前已开展全员核酸检测，所有出城道路均被管控，严禁城区内任何人员外出。同时，超市、商店、农贸市场均被关闭。此外，所有餐饮店铺、食堂也已停止堂食供应。有网友爆料，城区内的各个居民小区已经全部戒严，部分学校已发出封校、停课的通知。仅仅一夜之间，整个景洪市就已全面停摆。
 
-《纽约时报》亚洲区副主编卡洛斯·特哈达 (Carlos Tejada) 去世，享年49岁。他在社交媒体上发布自己接种了莫德纳加强疫苗后不到一天，就心脏病发作了。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/西1.jpg)
 
-特哈达部分参与了该报的 COVID-19 报道，已婚并育有两个孩子。在《纽约时报》之前，他曾在《华尔街日报》工作过近五年。
+据悉，此次景洪市封城的原因是关联到了昆明市的一例本土阳性病例。该阳性患者是一名就读于昆明某院校的学生，其所在院校位于昆明市下辖的县级市安宁市。据其学校通报显示，该生曾于12月16日前往景洪市游玩，返回学校后于25日确诊为中共病毒阳性患者。
 
-根据特哈达自己的 Instagram 页面，他很高兴在韩国首尔收到 mRNA/LNP 加强剂。 特哈达 2021 年 7 月第一次接受了强生 DNA/AAV COVID-19 疫苗接种。在 12 月 17 日接受莫德纳加强剂后不到一天死于心脏病发作。第二天早上，他的妻子诺拉通过特哈达的社交媒体分享了这一消息。《泰晤士报》于 12 月 22 日证实了他的死讯。
+受景洪市疫情管控影响，目前西双版纳机场航班已大面积取消，有大批游客被迫滞留城中。
 
-前《纽约时报》记者亚历克斯·贝伦森（Alex Berenson）在他的《子栈》（Substack） 上报道说 ，特哈达没有给予接受加强注射的知情同意，因为同意书是用韩语写的，而 特哈达不懂韩语。
+对此情况，有被滞留旅客发出强烈质疑，仅因一例阳性关联病例就要大规模封城，如此劳民伤财的防疫政策是否太过度了？但也有当地市民表示，疫情期间，类似这样的封控措施在云南边陲地区已实属平常，当地人早已经被迫习惯了。[https://news.sina.com.tw/article/20211227/40901674.html https://gettr.com/post/pkq4hpa346](https://news.sina.com.tw/article/20211227/40901674.html%20https://gettr.com/post/pkq4hpa346)
 
-在特哈达的社交媒体上，他开玩笑地说 Omicron 可以“用你的湿鼻涕攻击他”，然后继续说，“我所要做的就是，用我看不懂的语言填写这张表格，翻译软件告诉我，我现在属于防弹少年团。”
+编辑/校对/发稿：菩提树
 
-贝伦森还指出，目前还没有关于混合两种不同类型疫苗接种效果的临床试验。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/12月-1-1.png)
 
-对 COVID-19 疫苗接种进行的研究表明，**那些快速连续接种疫苗的人，更有可能出现心脏并发症，例如心肌炎和心包炎。**
+**更多资讯，更多关注**
 
-到目前为止，《纽约时报》没有提到特哈达在他过早死亡前几个小时接受了加强注射。 对此，该报前雇员贝伦森（Berenson）表示，他希望特哈达的死最终能“唤醒时代”。
+[**纽约香草山农场GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-发表于 AAHA 的研究表明，mRNA 疫苗会增加患者的炎症。特哈达在接受他的莫德纳加强剂之前，**CDC ****宣布**** 80% ****的**** COVID-19 Omicron****“变异”病例，是在“完全接种疫苗”的个体中发现的。**
+[**纽约香草山农场GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-47% 的 Omicron 病例是在那些只接受第一次疫苗接种的人身上发现的，其中 33% 的病例是在接种疫苗和加强疫苗的人身上发现的。
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-点评：用前《纽约时报》记者的话表达自己的希望： 他希望特哈达的死，**最终能“唤醒时代”。**
-
-**参考资料：**[thenationalpulse][NY Times Editor, 49, Dies One Day After Moderna Booster Shot.](https://thenationalpulse.com/2021/12/26/ny-times-editor-49-dies-one-day-after-moderna-booster-shot/)
-
-* * *
-
-*审核：文乐*
-*校对 : 信心满满*
-*发布：信心的选择*
-
-![](https://assets.gnews.org/wp-content/uploads/2021/12/GNEWS_CH.-1.jpeg)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
