--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,23 +1,40 @@
 ---
-title: 日本盐野义制药研发的疫苗已进入最终临床实验阶段
+title: 特鲁多称西方国家需要团结起来对抗中国
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795122/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795205/)
 
-撰稿：东京樱花团/百花李香
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1512.png)[图片来源](https://news.yahoo.co.jp/articles/5b082c01e428596ef91b1b6f0c6d0205d5b5cc76#:~:text=%E3%83)
-《朝日新闻》网站消息，12月27日盐野义制药宣布，该公司开发的一种治疗中共病毒（新冠病毒Covid-19）的疫苗目前在越南正进行最后阶段的临床试验。
+撰稿人：小湫
 
-试验今后还将在菲律宾和其它亚洲国家进行，共涉及约50,000人。今后根据试验的结果，有可能为海外供应这种疫苗。该公司的目标是在明年3月将该疫苗投入实际使用。
+以下内容翻译自Fox新闻网
 
-在日本国内，明年1月开始将通过另一种方法进行最后阶段的试验。接种疫苗后，将体内产生的预防感染的中和抗体的值与其它公司的疫苗进行比较，并根据结果，计划向卫生劳动福利部申请批准。目前该制药公司已经建立了一个每年将提供超过3000万人的生产体系。
+[加拿大](https://www.foxnews.com/category/world/world-regions/canada)总理贾斯汀·特鲁多恳请西方国家团结起来反抗[中国，](https://www.foxnews.com/category/world/world-regions/china)称中国政府经常在西方各个国家之间制造矛盾，造成彼此对抗。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/AP21019635452381-24.jpeg)
+图片来自网络
 
-从美国Novavax生物医药公司获得技术的武田制药有限公司目前也在向卫生劳动福利部申请批准生产和销售许可。除上述之外，还有几家日本制药公司也在研发相关疫苗的阶段。
+特鲁多[在接受环球电视台采访时说，](https://www.reuters.com/world/western-states-need-united-front-against-divisive-china-trudeau-2021-12-25/)我们需要坦诚的信任和更好的合作，这样中国政府无法在西方国家之间玩弄伎俩，使我们彼此分裂。
 
-信息来源：[コロナワクチン最終治験入り　塩野義、国内企業で初めて](https://news.yahoo.co.jp/articles/5b082c01e428596ef91b1b6f0c6d0205d5b5cc76#:~:text=%E3%83)
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+
+图片来自网络
+
+中国政府经常以中国的庞大市场作为诱饵，让西方国家彼此竞争成为对手。
+
+近年来，加拿大与中国的关系一直紧张，最为引人注目的事情，是中国公民华为首席财务官孟晚舟于 2018 年在温哥华国际机场因美国引渡令而被捕。中国不久后拘留了两名加拿大人，这是对加拿大拘捕孟晚舟行为的恶意报复。
+
+孟最终于 9 月与美国检察官达成协议，中国政府才释放了两名加拿大国民。
+
+加拿大也一直强烈批评中国的人权问题，与其他西方国家一道，对2022年2月的北京冬季奥运会进行了外交抵制。
+
+中国政府并没有接受这一抵制，反而声称，抵制他们的人违反了《奥林匹克宪章》确立的体育运动政治中立原则，与奥林匹克“更加团结”的格言背道而驰。
+
+在美国宣布外交抵制后，中国外交部发言人赵立坚表示，“美方将为自己的做法付出代价，请关注后续行动”。
+
+信息来源：
+
+[Trudeau says western countries need to stand together against China](https://www.foxnews.com/world/trudeau-says-western-countries-need-to-stand-together-against-china)
+
+[【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
+![此图像的alt属性为空；文件名为澳喜图标2-1-3.jpg](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%BE%B3%E5%96%9C%E5%9B%BE%E6%A0%872-1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
