--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,18 +1,31 @@
 ---
-title: 西媒头条 — 第139期
+title: 加拿大总理称中共玩弄民主国家 致使西方国家分裂
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1795060/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1795133/)
 
-制作: 蚂蚁兄弟
+作者：纽约香草山农场-蓝天大海
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+12月25日，加拿大总理贾斯汀-杜鲁多在接受加拿大媒体采访时表示，西方国家应该联合起来对抗中共，以防止其利用商业利益，挑动民主国家之间相互对抗。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/截屏2021-12-27-下午9.31.32.png)
+杜鲁多表示，民主国家对中共国市场的一味逐利，导致其牺牲政治理念，而让位于经济利益。中共经常以公开市场竞争的方式，非常巧妙地玩弄西方国家，让西方国家为各自利益而互相对抗，导致分裂。志同道合的西方民主国家应该形成“统一战线”，反对中共日益增长的“强制外交”。
 
-**关注西班牙语媒体每日新闻焦点，多一个视角看世界，多一份辨别真伪的信息。**
+当评论习近平独裁下的中共国时，杜鲁多说，中共国已不再是十年前，甚至五年前，所想象的样子了。他还表示，加拿大将继续在多方面挑战中共，包括人权、香港民主、支持记者以及不干涉亚洲独立国家等事物。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/xm1227.001.jpeg)
+参考链接：[Trudeau says China ‘playing’ democracies against each other, urges ‘united front’](https://globalnews.ca/news/8466217/trudeau-china-countries-need-united-front/)
 
-发稿：信心的选择
+![This image has an empty alt attribute; its file name is 12%E6%9C%88%E5%B0%8F%E5%9B%BE.jpg](https://assets.gnews.org/wp-content/uploads/2021/11/12%E6%9C%88%E5%B0%8F%E5%9B%BE.jpg)
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/GNEWS_CH.-1.jpeg)
+总编：文真
+编辑：文真
+校正/发稿：呼吸的雾霾（文小呼吸）
 
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
