--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,36 +1,33 @@
 ---
-title: 五角大楼计划在俄罗斯发动攻击时与乌克兰共享“可操作性”情报
+title: 班农先生抨击HBO Vice的谎言和歪曲报道
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1795056/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1795132/)
 
-翻译：Steven Hu
-![](https://assets.gnews.org/wp-content/uploads/2021/12/图片1-142.png)
-图片来源：谷歌图片
+作者：纽约香草山农场 文真
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+12月26日，班农先生发布盖特文章，大力抨击HBO Vice针对郭文贵先生及爆料革命的谎言及歪曲报道。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/截屏2021-12-27-下午9.31.19.png)
+在盖文中，班农先生一如既往地称赞郭先生智慧过人，勇于揭露HBO Vice的谎言，并全程拍摄采访过程，适时公之于众。
 
-据《零对冲》发布的作者的泰勒·杜登报道：“五角大楼正在制定一项计划，为乌克兰提供战场情报，以帮助该国 能更迅速地应对俄罗斯可能的入侵”。而五角大楼官员在针对有关消息评论时声称这一切都是为了“避免局势升级”，显然克里姆林宫肯定不会认同这种针对来自于《纽约时报》披露的消息的解释。
+自从发起爆料革命，郭先生一直毫不留情地揭露武汉生物武器实验室真相，戳穿罪犯福奇的谎言，爆料中共高层活摘器官，以及对新疆实行纳粹式种族灭绝的事实。
 
-本周末，俄罗斯军方宣布在所谓的“训练演习”结束时从乌克兰边境附近撤出约 10,000 名士兵。 但基辅和华盛顿官员一直在询问据说在该地区增派的约 10 万名士兵。 然而与声称将在 1 月的某个时间点进行“入侵”的说法相反，有重要迹象表明这是紧张局势降级的开始。
+班农先生一针见血地指出，HBO Vice对郭先生的歪曲报道，是美国媒体公司对中共犯罪集团卑躬屈膝，俯首称臣的铁证。HBO Vice早已成为中共的走狗。为了保障中国老百姓、美国民众和全人类的利益，我们必须消灭中共犯罪集团。
 
-《纽约时报》的报道将五角大楼目前正在进行的计划描述为一种针对“突发事件”的应急措施，这将使华盛顿能够帮助乌克兰阻止俄罗斯对顿巴斯入侵，但以观察家的常识来说，这实际上是确保美国直接卷入任何俄罗斯与乌克兰发生热战时准备的方案，而《纽约时报》对此的评论是：“一个强有力的情报共享计划标志着美国军事和情报参与的巨大升级。”
+参考链接：[https://gettr.com/post/pkonj1d4f8](https://gettr.com/post/pkonj1d4f8)
 
-上周，乌克兰军队在其亲俄罗斯分离主义地区附近进行“实弹”演习时展示了制导反坦克标枪导弹。而两名美国官员则表示，五角大楼关于“可操作”情报的提议可能更重要，这些信息将包括俄罗斯军队是否正在穿越边境的图像。 如果及时分享这些信息，乌克兰军方可以阻止攻击。
+![This image has an empty alt attribute; its file name is 12%E6%9C%88%E5%B0%8F%E5%9B%BE.jpg](https://assets.gnews.org/wp-content/uploads/2021/11/12%E6%9C%88%E5%B0%8F%E5%9B%BE.jpg)
 
-共享的实时性也显然是为了确保华盛顿不会在第二天在报纸上听到突然的“俄罗斯吞并乌克兰东部”的消息。 虽然报告中没有明确说明，但对此类计划的任何授权很可能涉及美国在该地区的秘密情报存在，虽然这种情况很可能早已存在。
+总编：文真
+编辑：Kathy文艺
+校正/发稿：呼吸的雾霾（文小呼吸）
 
-正如一位前奥巴马政府高级官员、曾担任俄罗斯、乌克兰和欧亚大陆副助理国防部长的伊夫林法卡斯所描述的那样，“我们能做的第一件事就是实时提供可操作的情报，它说‘俄罗斯人正在越过防卫线，“她补充说：“我们通知他们，他们用它来应对俄罗斯人。”
-
-但如果俄罗斯军方知道美国的这种针对性援助是这种情况，它将立即将美国视为冲突的直接参与方和侵略者，从而开启以乌克兰为中心的快速国际化地区战争的可能性。
-
-与此同时，正在起草的五角大楼“选项”清单并不止于此：五角大楼、国务院和白宫正在拟定的想法清单包括将曾经分配给阿富汗军队的直升机和其他军事装备重新分配给乌克兰。 政府还在考虑向乌克兰派遣更多的网络战专家。 美国和英国已派出一些专家加强防御，以防普京用网络战作为地面入侵乌克兰的前奏或者干脆以此取代对地面战。
-
-实际上延迟执行美国这项计划怡好正是因为担心普京会视这是一个足以发动入侵计划的严重挑衅……
-
-这在很大程度上取决于原计划的在下个月举行的俄罗斯和美国-北约会谈是否真的实现。 上周，俄罗斯方面公开了它所说的将在日内瓦举行的与北约东扩有关的“安全保障”谈判的一致意见。
-
-然而，到目前为止，白宫对会谈的承诺程度要仍然不清楚，白宫新闻秘书金.帕斯奇 几天前无法确认会谈将在何时何地举行。
-
-原文链接：[https://www.zerohedge.com/geopolitical/pentagon-preps-plan-actionable-intelligence-sharing-ukraine-if-russians-attack](https://www.zerohedge.com/geopolitical/pentagon-preps-plan-actionable-intelligence-sharing-ukraine-if-russians-attack)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
