--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,55 +1,38 @@
 ---
-title: 雅典娜疫情更新（2021年 12月27日）
+title: 中国政府以威胁国家安全为由限制境外IPO
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1795050/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1795126/)
 
-**整理：枳实**
-![](https://assets.gnews.org/wp-content/uploads/2021/12/1-333.png)图片：雅典娜农场设计组 精灵蓝
-**一，全球疫情基本数据**
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-感染总数：2.38亿（日新增 45.9万）
-死亡总数：426万（日新增 3397人）
-每万人感染人数：387.1131人（除中国外）
-（以上数字几天来大幅度下调修正，参见下图全球累计病例数陡降曲线，原因不明。）
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1508.png)
-**二，全球“疫苗”毒针统计数据**
+- ![](https://assets.gnews.org/wp-content/uploads/2021/12/106904968-16250800542021-06-30t185456z_1685984549_rc20bo9xh7ku_rtrmadp_0_didi-group-listing.jpeg)图片来源：CNBC
 
-“疫苗”毒针注射总数：88.1亿
-完全“接种”：37.7亿人
-完全“接种”百分比：48.3%
-图片来源：Our World in Data
 
-**三，澳洲疫情和“疫苗”数据**
+#### 编译：小红帽
 
-感染总数：312,096（今日新增 10,186人）
-死亡总数：2197人
-每万人感染人数：116.4625人
-“疫苗”毒针注射总数：42,221,068 （今日新增10,338针）
-第二针“接种”：1879.2282万人
-第二针“接种”百分比：76.7%
-16岁以上人口接种至少一剂疫苗的比例：94.2%
-16岁以上人口接种至少两剂疫苗的比例：91.1%
+根据Business World12月27日报道， **中国政府计划加强对国内公司海外股票销售的审查，并禁止那些可能对国家安全构成威胁的公司上市。**
 
-**四，数据分析和疫情要闻**
-![](https://assets.gnews.org/wp-content/uploads/2021/12/1-335.png)![](https://assets.gnews.org/wp-content/uploads/2021/12/2-86.png)
-今日澳大利亚病例新增首次破万，如上图所示，每日新增病例无论增幅还是数字都远超历史记录。考虑到澳洲16岁以上人口“完全”疫苗接种率已高达90.9%，比较上面两张每日新增病例数字和“疫苗”接种的曲线图，很容易看出这些针剂对疫情的影响。其它国家都可以看到类似的现象。比如英国是毒疫苗推广的模范生，请看下图，英国的加强针已经很普及了，而且英国民众注射加强针的热情高涨（前几期我们分享过英国，美国，澳洲，和欧盟的每日每百人疫苗注射数量的比较曲线，显示英国的数字遥遥领先）。
-![](https://assets.gnews.org/wp-content/uploads/2021/12/11-27.png)
-然而英国的每日新增病例如下图所示：
-![](https://assets.gnews.org/wp-content/uploads/2021/12/22-8.png)
-这些曲线，恐怕连小学生都很容易理解。然而，主流媒体们仍然继续声称，这些毒针能够控制疫情传播，不注射则不能工作的强制政策是合理的，给孩子们注射这些针剂能够保护他们的爷爷奶奶免于感染。
+根据中国证监会周五晚间发布的一份咨询文件，所有寻求首次公开募股（IPO）和在海外增发股票的中国公司都必须在中国证监会（CSRC）注册。
 
-数据来源：
-[谷歌](https://www.google.com/search?q=covid+case&amp;rlz=1C1ONGR_en-GBAU960AU960&amp;oq=covid+case&amp;aqs=chrome..69i57j69i59j0i402l2j0i131i433i512j0i20i131i263i433i512j0i131i433i512j69i60.1435j0j4&amp;sourceid=chrome&amp;ie=UTF-8)
-[Our world in data](https://ourworldindata.org/coronavirus-data)
-[澳大利亚卫生部网站中共病毒疫苗统计](https://www.health.gov.au/initiatives-and-programs/covid-19-vaccines/numbers-statistics)
-[澳洲TGA每周疫苗不良反应报告](https://www.tga.gov.au/covid-19-vaccine-safety-monitoring-and-reporting)
-[covidlive.com.au](https://covidlive.com.au/)
-[First state to mandate booster shot](https://www.news.com.au/national/western-australia/covid19-vaccine-mandate-in-wa-now-includes-a-third-dose/news-story/752c67452adc76f7242228edb500a12e)
-[Booster shot gap to be slashed to four months and then down to three](https://www.news.com.au/lifestyle/health/health-problems/booster-shot-period-to-be-slashed-to-four-and-three-months-as-omicron-fight-ramps-up/news-story/005b2aabba44f2e2b72dac7aa019611d)
+根据提案，在海外上市并可能威胁国家安全的公司被禁止出售股票，而引起网络安全问题的公司将接受安全审查。
 
-发布：去中心化Math
+这些变化是中国政府在网约车巨头滴滴公司（Didi Global， Inc.）在纽约首次公开募股后，采取的打击海外上市的最新举措。尽管存在监管方面的担忧，但滴滴仍继续上市。
 
-**更多资讯，请关注：
+从那时起，中国当局已经采取行动，阻止大量寻求在美国上市的公司，从而关闭了一条为科技公司及其华尔街支持者带来数十亿美元的道路。
+
+滴滴在美国上市之际，中国政府正在寻找控制中国科技巨头持有的大量数据的方法，部分原因是为了确保执政的共产党将财富分散到一小群亿万富翁之外——这是一场创造“共同富裕”的运动。
+
+中国加强监管审查与美国的举措相呼应。美国证券交易委员会（Securities and Exchange Commission）已停止中国公司未决的首次公开募股，直到全面披露政治和监管风险。
+
+美国证券交易委员会警告，投资者可能没有意识到他们实际上购买的是空壳公司的股票，而不是直接持有企业股份。
+
+中国监管机构表示，在国内涉及资产或核心技术重大纠纷的公司也将被禁止在海外上市。
+
+新闻来源： [China to restrict foreign IPOs, may ban on national security – BusinessWorld Online (bworldonline.com)](https://www.bworldonline.com/china-to-restrict-foreign-ipos-may-ban-on-national-security/)
+
+***发布：小红帽***
+
+**更多资讯，请关注：****
 **[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
