--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,18 +1,22 @@
 ---
-title: 中共区别对待历史事实
+title: 日本盐野义制药研发的疫苗已进入最终临床实验阶段
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795048/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795122/)
 
-作者：东京樱花团丨阿恩
-![](https://lh5.googleusercontent.com/4TOOfbakyUw7UD0o4Bc4-uQ5eashK9jGSYWGjMUCQeFVYf2EM8W8oB5B9liYABALkhpciZ6TRh43jA7qOx_CaUZInZ5Q4rQ09O_1z3o2Ih_6cGp2d1oWPFpfj-Ti66ewV0r4ruNQ)[*图片来源*](https://www.thestandnews.com/politics/ab%E8%A2%AB%E4%BA%94%E5%BA%A6%E8%BF%BD%E5%95%8F%E5%A4%A7%E5%AD%B8%E6%8B%86%E9%99%A4%E5%85%AD%E5%9B%9B%E5%B1%95%E5%93%81-%E5%B6%BA%E5%A4%A7%E5%8D%94%E7%90%86%E5%89%AF%E6%A0%A1%E9%95%B7%E5%80%99%E4%BB%BB%E7%AB%8B%E6%B3%95%E6%9C%83%E8%AD%B0%E5%93%A1%E5%8A%89%E6%99%BA%E9%B5%AC%E6%88%91%E5%94%94%E4%BF%82%E5%A5%BD%E6%83%B3%E8%A9%95%E8%AB%96)
-岭南大学的六四浮雕和校内的民主女神像壁画上周五被除去，岭大协理副校长刘智鹏称，学校有自己的物品管理制度，并称不知道这个展品对于中国历史的认识有多大作用。被记者问及有小学上月按教育局的建议，在向小一学生播放日军处决百姓、婴幼儿尸横遍野的片段导致恐慌。刘智鹏却称，历史教育最基本的是展示事实，是唯一要遵守的原则。
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1512.png)[图片来源](https://news.yahoo.co.jp/articles/5b082c01e428596ef91b1b6f0c6d0205d5b5cc76#:~:text=%E3%83)
+《朝日新闻》网站消息，12月27日盐野义制药宣布，该公司开发的一种治疗中共病毒（新冠病毒Covid-19）的疫苗目前在越南正进行最后阶段的临床试验。
 
-历史是不可更改的事实，是后人对前人作为的借鉴和指引，但中共却将历史当成为巩固政权的工具。六四运动和国内的舆论被中共血腥镇压，香港的大学成为存放六四展品的基地，民主的种子也在香港生根发芽。97后中共对香港民主活动的管制愈发严格，直至反逃犯条例运动后，中共全面禁止港人参与六四纪念活动，并再次将六四定性为“暴动”。中共享港区国安法为各种行为冠以危害国家安全的罪名，大学校园成为清理民主思潮的重点，代表捍卫民主的六四浮雕、壁画和民主墙首当其冲成为被清理的对象。这段追求民主的历史被中共扼杀，南京大屠杀的历史却被中共断章取义地在校园播放，中共截取了最血腥的坑杀场面吓得一年级的孩子嚎啕大哭，教育局、港府和学校则互推卸责任，丑态百出。同为历史事实，一个被扼杀，一个被长期宣扬，中共制造对外民族仇恨的伎俩在内地屡试不爽，但在香港却大失预算，港版粉红大军的建设“任重道远”，香港的孩子们将难逃中共魔爪。
+试验今后还将在菲律宾和其它亚洲国家进行，共涉及约50,000人。今后根据试验的结果，有可能为海外供应这种疫苗。该公司的目标是在明年3月将该疫苗投入实际使用。
 
-资料来源：[**被五度追问大学拆除六四展品  岭大协理副校长、候任立法会议员刘智鹏：我唔系好想评论**](https://www.thestandnews.com/politics/ab%E8%A2%AB%E4%BA%94%E5%BA%A6%E8%BF%BD%E5%95%8F%E5%A4%A7%E5%AD%B8%E6%8B%86%E9%99%A4%E5%85%AD%E5%9B%9B%E5%B1%95%E5%93%81-%E5%B6%BA%E5%A4%A7%E5%8D%94%E7%90%86%E5%89%AF%E6%A0%A1%E9%95%B7%E5%80%99%E4%BB%BB%E7%AB%8B%E6%B3%95%E6%9C%83%E8%AD%B0%E5%93%A1%E5%8A%89%E6%99%BA%E9%B5%AC%E6%88%91%E5%94%94%E4%BF%82%E5%A5%BD%E6%83%B3%E8%A9%95%E8%AB%96)
+在日本国内，明年1月开始将通过另一种方法进行最后阶段的试验。接种疫苗后，将体内产生的预防感染的中和抗体的值与其它公司的疫苗进行比较，并根据结果，计划向卫生劳动福利部申请批准。目前该制药公司已经建立了一个每年将提供超过3000万人的生产体系。
 
-*校对：东京樱花团 / 文小白*
-*发布：东京樱花团 / 平安卿卿*
+从美国Novavax生物医药公司获得技术的武田制药有限公司目前也在向卫生劳动福利部申请批准生产和销售许可。除上述之外，还有几家日本制药公司也在研发相关疫苗的阶段。
+
+信息来源：[コロナワクチン最終治験入り　塩野義、国内企業で初めて](https://news.yahoo.co.jp/articles/5b082c01e428596ef91b1b6f0c6d0205d5b5cc76#:~:text=%E3%83)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
