--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,40 +1,47 @@
 ---
-title: 明面整治明星网红，背后习近平与上海帮政治内斗
+title: Omicron的危险性及其造成的综合征超出我们的想象
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1795032/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1795070/)
 
-作者：顺其自然
-编辑：文泓
-![](https://assets.gnews.org/wp-content/uploads/2021/12/1-332.png)图片来源：墨尔本雅典娜农场设计组
-在美国时间12月25日大直播，郭先生主要是与爆二代聊天，主题关于生活、哲学、婚姻、信仰和孩子教育，在这里就不作赘述。在直播中，郭先生爆了一个料，“明星台前有多风光，背后就有多卑微”。
+而且现在你看我就过去就这两三天，你们不知道有多恐怖。Omicron现在看来，就是我们一定要纠正，这Omicron的危险性比我们想象大得多得多。它诞生它造成的所有的综合症，比我们想象大的多得多，这非常的危险。
 
-在亚洲娱乐界，韩国有四大家族，日本有三大帮派，台湾有黑帮杨登魁的八大电视，香港有林建岳（丽新集团）、杨受成（英皇集团）、向华强（中国星集团）。所有台湾和香港艺人只能选择跟随各个黑社会组织，与大流氓中共合作。
+纽约就是那个试的那个检测棒，一个都买不着。咱们的办公室，新办公室，五例、五例，就短短这一周，就五例的发生，而且都是重要人物。
 
-关于王力宏，郭先生道出了背后的实情。王力宏由台湾黑帮杨登魁扶植出道，后与香港黑帮向华强联合，后来王力宏不负众望一路大红，杨登魁又把他交付给大陆的安全部，由公安部一局局长林强培养起来。
+就是管理层，所有这些人几乎全部得，现在就剩下一个我和王雁平，全都得了。更夸张的是，我们一个重要的律师，大家都熟悉的，他家6个姐妹，在德州，其中的一个姐姐，最跟他好的一个姐姐过世了，一星期前去了。他整个人，我从来没见到他这样过，快崩溃了。
 
-最重要的，王力宏当年在大陆发展的时候，无意中得罪过两个可以决定他的命运的人。在大陆演出时他竟然与彭丽媛、宋祖英发生过冲突，得罪了两任“国母”，后来经曾庆淮出面才摆平。因为大陆的演艺圈背后老板是曾庆淮。
+烧，去火葬，他是个天主教徒，烧——火葬等了很久，还不让葬。现在烧完了，竟然是要等埋骨灰，埋骨灰要等一个月。100万的德州，100万人的德州，火葬场排队，埋墓地排队。这在美国简直是不可思议的，你们想过有多恐怖吗？
 
-现在习处理王力宏、吴亦凡等曾家势力控制的明星，矛头对准的却是背后的大佬曾庆红、曾庆淮。所以，无数的明星还会受到曾庆淮的牵连，凡是曾庆淮势力培养的明星统统都要灭，以曾庆淮为靠山、杨登魁培养的明星统统也都要被灭。而最近中国网红界也被大力整治，缘由是孟建柱、孙立军控制网红界，他俩又是江家人、曾家人，所以网络红人们也统统都要被灭。
+就在昨天告诉我，他90岁的、94岁的母亲又染上了，记住，他姐姐和她母亲都是相信爆料革命的，是没有打疫苗的，是没有打疫苗得上的。姐姐进了医院，在临死前就手机尝试着视频，就走了。这是一个，就在我们身边的5个，和在这发生的。
 
-曾几何时，在北京盘古四合院，王姓女天王和香港的十几个大咖在吃完一两百万美元一盒的鱼子酱后，衣不遮体、神智不醒、淫乱至极、白粉满地……演艺圈染指毒品是因为空虚寂寞，参与赌博是因为缺乏定力和难以抵挡金钱的诱惑。毒和赌都是背后的黑帮大佬所设置控制艺人的枷锁。所有台湾、香港的歌星都是权贵和富豪的玩物，没人要了再抛到社会上去，包括徐小凤、邓丽君和高胜美。
+昨天对每个人来讲都是很难过的一天，更重要的事情是：我们好多在美国，帮助我们政治公关的一些战友们，就是纯美国人一家、一家的染上，一家、一家的染上。
 
-我们普通人都知道演艺圈是黑帮控制的，曾家、尤其是曾庆淮控制港澳台和大陆的娱乐圈，但是我没有想到，王力宏和他妻子李靓蕾的互撕，竟然与彭丽媛有关，还与习近平家族与曾家政治斗争有关。王力宏因曾拒绝演出，弄这么一出，这彭国母比当年的江青有过之无不及。网友都以为李靓蕾与王力宏的互撕只是家事，只是因为争财产，没想到夫妻互撕的家庭事件背后竟然有着不可言状的秘密。其中牵扯到中共最大两大派系的你死我花的内斗。这水也太深了吧，绝对出乎我的意料。
+非常可怕的事情，就有些人家里不相信这个反疫苗的，就是反共产党的假疫苗，两针的三针的都得上了。就是这个绝对超出大家的想象，这个Omicron。那么现在在西方和全世界，爆料革命，就是这个Isobel, Isobel杨坚决不报道的。
 
-薇娅巨额补交税款这事，我觉得背后还是有一些玄机的，不可能只是因为偷税漏税问题，只是没想到网红竟然是孟建柱控制的产业。现在看来，只要是挣钱的产业，没有他们不控制的。本人对薇娅的印象非常好，因为看过她一路走来的故事，特别佩服她的能力、果断、敢闯的性格。估计是做直播有了一定的名气以后，就被孟建柱的资本盯上了，开始大力打造培养她，给她巨大的流量，有了流量和粉丝，那供应商自然而然找到她。原本以为薇娅只是借助于粉丝流量打压供应商，把供应商的价格压得极低，甚至逼的供应商亏本供货给他们，如此一来让顶级主播盆满钵满，却逼死了众多的小商户。现在习近平出手收拾直播网红，起初以为，一是中共财政没钱了，要从他们身上弄钱，以充实财政；二是打击顶级主播后，流量会给到中小商家，从而稳定中小企业和就业。现在看来，不能说没有这方面的原因，但更大的原因竟然是为了内部政治斗争，主要服务于打击曾家，孟建柱控制的娱乐圈和网红产业。
+编辑整理：海贼王M.D.LUFFY；
 
-我们才知道，中共国拍电影电视最主要的功能是洗钱，曾家、孟家势力应该没少借助娱乐圈来洗钱。现在看来，不止娱乐圈，这些个顶级网红主播应该也是他们洗钱的工具，否则薇娅怎么可能一两年的时间就赚上百亿？这里面有多少是洗钱的资金就不为外人所知了。
+字幕文件制作：小满；
 
-现在习主席和彭副主席多面出击，对娱乐圈、网红直播大加整肃，要将所有原来由曾孟控制的产业全部拿到自己的手中。如此看来，之前风光无限的，无论是一流还是二流的，还有顶级的演艺明星，将来的结局或者被整肃，或者渐渐的消失，然后换上由习家人控制的一批演艺明星再上去。如若某些明星自愿加入到习家阵营，还是能留个活路的。但现在是习近平与曾家、孟建柱较量正酣之时，谁能知道最后哪方胜利呢？这个选择还是挺难的，一不小心他们就成立政治斗争的牺牲品。所以，中共治下，演艺圈明星、网红主播们未来也不会有好的前景。
+视频制作及上传：Cindy；
 
-油管视频资料来源：[闲聊澳洲 – YouTube](https://www.youtube.com/channel/UCPxB0vpNpmHN0hORXK4gj2A)
+G-News发布：小满；
 
-发布：去中心化Math
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
 
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
