--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,34 +1,36 @@
 ---
-title: 核谈：中共生化战改变了世界核力量平衡
+title: 五角大楼计划在俄罗斯发动攻击时与乌克兰共享“可操作性”情报
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795012/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1795056/)
 
-作者：东京樱花团｜捆绑CCP一千年
-![](https://lh4.googleusercontent.com/bMeLNRWu8d0ZKkBQ7EQM0259oU1uv55EeuVFyziXH1Yas8qgh3hE5hN62SquOg-KJTN5O8LuLpzfuMErZoKX398gNyE2wf9oNIp5xsM-iLRWwNdl1p5z-v_seyBCpkQL8Oau0lu5)[*图片来源*](https://moderndiplomacy.eu/2021/12/26/aukus-leading-to-nuclear-arms-race-in-indo-pacific-region/)
-**日本首相岸田文雄 27 日上午确认以视频演讲的方式参加；联合国举行的核不扩散大会。随着中共国的军事扩张，美国及其盟国正在尽一切努力，向澳大利亚提供核潜艇，最滑稽的是中共国试图影响拜登总统，要求美国放弃更多核武器。**
+翻译：Steven Hu
+![](https://assets.gnews.org/wp-content/uploads/2021/12/图片1-142.png)
+图片来源：谷歌图片
 
-据日本《[朝日新闻](https://www.asahi.com/articles/ASPDW3JTPPDWUTFK005.html)》27日消息称，[岸田文雄首相 27 日上午正式确认以视频演讲的方式参加](https://news.yahoo.co.jp/articles/fbed02bf9f5725efe5f4a07347d762d6c7f45113)即将到来的（1 月 4 日）在纽约举行的核不扩散条约（NPT）审议大会。滑稽的是，22日，中共国环球时报谎称，拜登政府[要求日本不要参加该会议](https://world.huanqiu.com/article/465FguEjYZp)。
+据《零对冲》发布的作者的泰勒·杜登报道：“五角大楼正在制定一项计划，为乌克兰提供战场情报，以帮助该国 能更迅速地应对俄罗斯可能的入侵”。而五角大楼官员在针对有关消息评论时声称这一切都是为了“避免局势升级”，显然克里姆林宫肯定不会认同这种针对来自于《纽约时报》披露的消息的解释。
 
-岸田表示，由于新的中共病毒突变体“Omicron株”感染正在美国蔓延，“我调整了访问美国并发表演讲的方式，但我认为，每个国家都有越来越多的人转向 NPT 视频演讲。”他补充说，“我对这次会议也有强烈的感觉，所以我希望能够做出贡献。”
+本周末，俄罗斯军方宣布在所谓的“训练演习”结束时从乌克兰边境附近撤出约 10,000 名士兵。 但基辅和华盛顿官员一直在询问据说在该地区增派的约 10 万名士兵。 然而与声称将在 1 月的某个时间点进行“入侵”的说法相反，有重要迹象表明这是紧张局势降级的开始。
 
-- ***延展阅读：***[***王毅就海湾局势以“潘多拉魔盒”威胁***](https://www.guancha.cn/politics/2019_06_18_506126.shtml)
-- ***延展阅读：***[***求实：“澳核问题”将打开“潘多拉魔盒”***](http://www.qstheory.cn/qshyjx/2021-10/03/c_1127927419.htm)
+《纽约时报》的报道将五角大楼目前正在进行的计划描述为一种针对“突发事件”的应急措施，这将使华盛顿能够帮助乌克兰阻止俄罗斯对顿巴斯入侵，但以观察家的常识来说，这实际上是确保美国直接卷入任何俄罗斯与乌克兰发生热战时准备的方案，而《纽约时报》对此的评论是：“一个强有力的情报共享计划标志着美国军事和情报参与的巨大升级。”
 
+上周，乌克兰军队在其亲俄罗斯分离主义地区附近进行“实弹”演习时展示了制导反坦克标枪导弹。而两名美国官员则表示，五角大楼关于“可操作”情报的提议可能更重要，这些信息将包括俄罗斯军队是否正在穿越边境的图像。 如果及时分享这些信息，乌克兰军方可以阻止攻击。
 
-NPT审议大会是每五年一次在联合国总部举行的国际会议。检查核裁军情况并讨论防止核扩散的措施。去年日本首相也出席了审议会议并发表了讲话，但由于成员国之间的冲突，未能形成最终公报文件。
+共享的实时性也显然是为了确保华盛顿不会在第二天在报纸上听到突然的“俄罗斯吞并乌克兰东部”的消息。 虽然报告中没有明确说明，但对此类计划的任何授权很可能涉及美国在该地区的秘密情报存在，虽然这种情况很可能早已存在。
 
-随着大流行的不断加剧的影响，美澳印日新的联盟意识到为了遏制中共国的军事和经济侵入式影响，尤其是在印太地区，[美国及其盟国正在尽一切努力，向澳大利亚提供核潜艇](https://moderndiplomacy.eu/2021/12/26/aukus-leading-to-nuclear-arms-race-in-indo-pacific-region/)，这也是“2021 年 9 月 15 日，英国首相鲍里斯·约翰逊、美国总统乔·拜登和澳大利亚总理斯科特·莫里森发表联合声明，宣布建立名为 AUKUS 的增强型三边安全伙伴关系。 该协议的重要部分是帮助澳大利亚获得8艘核动力潜艇。”这一举措将使美澳成为遏制中共国军事扩张突破第一岛链的重要战略部署。
+正如一位前奥巴马政府高级官员、曾担任俄罗斯、乌克兰和欧亚大陆副助理国防部长的伊夫林法卡斯所描述的那样，“我们能做的第一件事就是实时提供可操作的情报，它说‘俄罗斯人正在越过防卫线，“她补充说：“我们通知他们，他们用它来应对俄罗斯人。”
 
-- ***延展阅读：***[***看看中共国的生物战野心***](https://www.orfonline.org/expert-speak/a-look-at-chinas-biowarfare-ambitions/)[***《SARS 的非自然起源和作为遗传生物武器的人造病毒新物种》***](https://www.amazon.com/%E9%9D%9E%E5%85%B8%E9%9D%9E%E8%87%AA%E7%84%B6%E8%B5%B7%E6%BA%90%E5%92%8C%E4%BA%BA%E5%88%B6%E4%BA%BA%E6%96%B0%E7%A7%8D%E7%97%85%E6%AF%92%E5%9F%BA%E5%9B%A0%E6%AD%A6%E5%99%A8-%E6%9D%8E%E5%B3%B0-%E5%BE%90%E5%BE%B7%E5%BF%A0/dp/B012984EOI)
+但如果俄罗斯军方知道美国的这种针对性援助是这种情况，它将立即将美国视为冲突的直接参与方和侵略者，从而开启以乌克兰为中心的快速国际化地区战争的可能性。
 
+与此同时，正在起草的五角大楼“选项”清单并不止于此：五角大楼、国务院和白宫正在拟定的想法清单包括将曾经分配给阿富汗军队的直升机和其他军事装备重新分配给乌克兰。 政府还在考虑向乌克兰派遣更多的网络战专家。 美国和英国已派出一些专家加强防御，以防普京用网络战作为地面入侵乌克兰的前奏或者干脆以此取代对地面战。
 
-最滑稽的是中共国对这次核裁军会议的反应，中共试图影响拜登总统，要求美国放弃更多核武器，便导演了一场类似掩盖病毒真相的幼稚的伎俩，竟然邀请所谓“[21名诺贝尔奖获得者在内的近700名科学家和工程师致信拜登，呼吁削减核武器数量](https://mil.news.sina.com.cn/dgby/2021-12-22/doc-ikyakumx5730068.shtml)。”这21名诺贝尔奖获得者恐怕也是生物学专家吧。因为中共知道，他的生物武器要比核武器的杀伤力更大更猛。而且中共国已经利用生物级核战争改变了世界。而且，“[数十年后依然能夺人性命，比核武器还可怕](https://www.163.com/dy/article/GNAE4PB505529C6M.html)。”
+实际上延迟执行美国这项计划怡好正是因为担心普京会视这是一个足以发动入侵计划的严重挑衅……
 
-2021年12月27日
+这在很大程度上取决于原计划的在下个月举行的俄罗斯和美国-北约会谈是否真的实现。 上周，俄罗斯方面公开了它所说的将在日内瓦举行的与北约东扩有关的“安全保障”谈判的一致意见。
 
-*校对：东京樱花团 / 文小白*
-*发布：东京樱花团 / 平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
+然而，到目前为止，白宫对会谈的承诺程度要仍然不清楚，白宫新闻秘书金.帕斯奇 几天前无法确认会谈将在何时何地举行。
+
+原文链接：[https://www.zerohedge.com/geopolitical/pentagon-preps-plan-actionable-intelligence-sharing-ukraine-if-russians-attack](https://www.zerohedge.com/geopolitical/pentagon-preps-plan-actionable-intelligence-sharing-ukraine-if-russians-attack)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
