--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,36 +1,21 @@
 ---
-title: 12/27每日播报｜1000多架美国飞机在圣诞节因“奥米炕”停飞
+title: 意在挑拨的指控
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1794930/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795035/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/61b85c7e56f4921401b77b8b)**
+作者：东京樱花团丨阿恩
+![](https://lh4.googleusercontent.com/ksPuSYpvNtvuGJw1y7VhzU__HJfpXVSdF8DfD8WcEeN5UXcTuSpbJ8KeOY3SNkCirxpQhS2ceMsqbrnSu2RJxiId_6Of7YS5Mp3Grnjti72Xqxldk0uhE4Hla_hBwb3ylZOFE9vP)[*图片来源*](https://www.hk01.com/%E6%94%BF%E6%83%85/716866/%E6%A2%81%E6%8C%AF%E8%8B%B1%E9%9A%94%E7%A9%BA%E6%8B%B7%E5%95%8F%E7%BE%85%E5%86%A0%E8%81%B0-%E8%BA%AB%E5%BE%8C%E8%81%96%E8%AA%95%E6%A8%B9-%E8%AA%B0%E7%B5%A6%E9%8C%A2%E8%B2%B7-%E7%BE%85-%E9%82%A3%E4%B8%8D%E6%98%AF%E6%88%91%E7%9A%84)
+前特首梁振英于社交专页连发四文质问与被港府通缉、现身处英国的前立法会议员罗冠聪，事因罗冠聪上载一幅与圣诞树的合照。梁振英质疑罗冠聪在英国的生活费来源。罗冠聪回应梁振英遐想连篇，只有「机会主义者」才会认为别人的行动背后都有可供量化的实际利益，不会相信人是会因为价值和原则行事。
 
-**2021-12-27**
+中共在香港强推国安恶法，众多民主斗士被抓捕入狱，还有不少民主人士逃往海外。其中英国的BN(O)护照吸引力大批不甘被中共压迫的港人举家移民，英国各地区都成立了港人社团，运作的经费大部分是通过众筹获得，为当地的港人提供语言培训、就业、税务和法务等方面的咨询，为寻求政治庇护的港人提供支持，并且定期举行社会活动宣传香港现状，这些组织为异乡的港人提供了避风港。不过中共却一直抹黑这些组织，用梁振英这样的中共代言人去跟踪和追击海外的港人组织，再通过媒体的渲染扭曲他们在港人心目中的形象。中共的目的就是要掐断港人的希望，对被困在香港的人形成“海外民运人士都是骗子”的假象，对国际社会编造“海外民运人士靠施舍度日”，如何能有能力带领港人捍卫民主。
 
-《路透社》华盛顿12月26日报道，周日，美国航空公司取消了1000多个航班，机组人员停飞。由于“奥米炕”病毒变种导致的感染人数激增，可能会有更多的旅行取消。
+海外的港人组织切不可小看这些人的舆论攻击，从中共对89六四后出走海外的民运人士的控制可知，乞丐化民运人士是十分成功的策略。因此港人海外组织的长期运作一定要有独立的经济创造能力和坚强的政治后盾，有幸新中国联邦在这关键的时候势不可挡地壮大，中共倾尽一国之力也无法阻挡。面对中共这个黑暗势力的代表，所有的中国同胞只有携手并进才能消灭它，为中华民族的未来谋得切实的机会。
 
-据统计，圣诞节当天共有997个航班被取消，平安夜有近700个航班被取消。
+资料来源：[**梁振英隔空拷问罗冠聪：身后圣诞树「谁给钱买」？罗：那不是我的**](https://www.hk01.com/%E6%94%BF%E6%83%85/716866/%E6%A2%81%E6%8C%AF%E8%8B%B1%E9%9A%94%E7%A9%BA%E6%8B%B7%E5%95%8F%E7%BE%85%E5%86%A0%E8%81%B0-%E8%BA%AB%E5%BE%8C%E8%81%96%E8%AA%95%E6%A8%B9-%E8%AA%B0%E7%B5%A6%E9%8C%A2%E8%B2%B7-%E7%BE%85-%E9%82%A3%E4%B8%8D%E6%98%AF%E6%88%91%E7%9A%84)
 
-在全球范围内，FlightAware的数据显示，截至美国东部时间周日下午3点41分，有2617个航班被取消，超过1万5百个航班被延误。
-
-“奥米炕”于11月首次被发现，现在占美国病例的近四分之三，在东部沿海地区，占90%之多。而且，圣诞节假期通常是旅行的高峰期，恰逢“奥米炕”病毒的迅速传播。美国许多地区的感染病例急剧上升，航空公司被迫取消航班，飞行员和机组人员需要隔离。
-
-另外，由于天气原因和罢工的增加，美联航不得不在周日取消约100个航班，一位发言人说，该公司正在努力为受影响的乘客重新订票。
-
-25岁的安乔利·罗德里格斯(Enjoli Rodriguez)是周日被困的数千名乘客之一，她乘坐的达美航空公司(Delta Air Lines Inc.)从洛杉矶飞往肯塔基州列克星敦的航班在平安夜被取消，原因是由中共病毒造成的员工短缺。
-
-受取消航班影响最严重的美国机场是西雅图、亚特兰大、洛杉矶、达拉斯沃斯堡和纽约肯尼迪国际机场。
-
-尽管最近的研究表明，“奥米炕”病毒产生的疾病较以前的版本更轻，住院率也更低，但卫生官员对前景持谨慎态度，并表示，关于这个病毒变种还有许多有待了解。
-
-秘翻新闻主编  冰糖葫芦喵编译报道
-
-发布：文小明
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2021/12/IMAGE-2021-12-13-113746.jpg)
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
