--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,55 +1,61 @@
 ---
-title: 封锁和口罩令将造成儿童智商降低
+title: 冬奥会中间共产党会有一堆针对爆料革命的分化瓦解行动
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1794920/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1795034/)
 
-编译： Jenny Ball
+冬奥会中间你放心，会一堆的行动。你看我刚刚出去，我边进洗手间边脱裤子边看这个信息，就是大卫兄弟这个英喜发出上海公安局的事情，从昨天到今天，问我最多的全都是各政府官员。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/04/6065cc0c85f540201c090432-1.jpg)图片来自网络
+第一个就是英国首相府的新闻官给我发信息：“Miles，这是真的假的？”他总是问我这真的假的。我回答：“Yes。”一般我回完yes他都不回了，就是相信了。昨天晚上就是英国深夜的时候给我发信息，这里的时间大概六点多钟的时候，六七点快深夜的时候，那时我还在办公室：我再问Miles，这件事的真实之外他们还会有什么行动？然后“哒哒”又问两三个问题。
 
-据一位儿童和青少年临床精神病学家称，最近的封锁政策和戴口罩规定，将造就一代表现出较低智商和社会脑损伤迹象的儿童。
+我说：“你们害怕了。”到现在没回复我。为什么我告诉你，英国人问这个问题不是因为他觉得共产党疯狂，他每天都知道共产党在干这事儿。他问是真是假就是通过我来证明他在政府内部说话是合法的，你看我得到我的可靠渠道。这是媒体和政府玩弄的伎俩，不担责任的伎俩，可靠渠道证实是真实的。
 
-马克·麦克唐纳（Mark McDonald）博士在接受主持人采访时，引用了布朗大学 8 月 11 日的一项研究 ，该研究发现“与大流行前出生的儿童相比，大流行期间出生的儿童的语言、运动和整体认知能力显着降低” 辛迪·德鲁克（Cindy Drukier）在 12 月 25 日的新唐人节目“全民开讲”(The Nation Speaks)中。新唐人是《大纪元》的姊妹媒体。
+然后再问接下来怎么样怎么行动？你知道干嘛？我告诉你绝对英国政府是担心这帮人利用推特盖特（可能口误）攻击他们。他是担心害怕，所以我再说他不回复了。
 
-口罩、Zoom学校和封锁令，导致“儿童总体上被剥夺了社交接触，他们看不到脸，整天呆在家里，**[****这****] ****实际上对少儿大脑造成了损害**，”他说。
+那么这个行动就上海这件事跟咱那个事儿是有关系的，青藤。就这种上海公安局发起的、一起的绝不会只是上海，全国各地都会发，包括香港。这是为下一期准备咱爆料革命和这次爆料革命的一场全面行动。
 
-在这一集中的另一次采访中，牛津大学循证医学中心主任卡尔·赫内根（Carl Heneghan）教授引用了证据，**表明大流行限制和“我们灌输给儿童的恐惧”导致心理问题恶化。**
+所以说各大媒体网络你做好准备吧，会“呼啦哗啦”下雨一般的到来——把裕达拿回去；盘古龙头变“龟头”、变“鸟头”；安全确认；冬奥会前，爆一次次采访；是吧？单伟健、PAG官司一次又一次的搞。你放心，他就想你一切办法消灭我们的声音，把我们变成邪恶的邪教集团和犯罪集团。
 
-赫内根引用了他 10 月 2 日的研究，该研究得出的结论是“十分之八的儿童和青少年报告说，**由于**** COVID-19 ****大流行，行为或任何心理症状或负面情绪增加了**。”
+这就是他们要做的，会一个接一个地来，而且在我们内部渗透，渗透！渗透啊！大量的渗透分化！包括最近你们不知道七哥在…就是最近挑拨咱们战友的特别是“铁血团”的，把老班长、长岛哥打成特务的；把大卫也是打成特务的；把木兰怀疑成是深挖特务的；都来了；卡丽熙都来了。
 
-“**学校关闭导致焦虑、孤独和压力增加**；研究报告说，随着学校停课时间的延长，因 COVID-19 引起的负面情绪会增加。“女性和年龄较大的青少年的心理健康状况恶化，更为严重。”
+越是老战友，最近我发现不攻击新战友，专攻老的。这招，而且有凭有证。你看看这是很夸张的，就是内部瓦解，外部造谣，然后来个浑水摸鱼。
 
-赫内根表示，12 岁以上的青少年的表现，也比 12 岁以下的儿童差，因为青少年面临着越来越大的同伴压力、社会压力，并且他们更加了解全球传递的信息。
+这共产党就当年跟国民党中日大战的时候——哎你抗日我不抗日，我抗日你不抗日；你抗日我…张学良“啪唧”搞了，就这。然后我跟苏联好，我跟美国好，日本好，这共产党就是浑水摸鱼这帮孙子，从来如此。
 
-赫内根说：“第一件要做的事是：减轻儿童对 COVID 的恐惧和焦虑。”“对于儿童来说，[COVID] 实际上是一种非常安全的疾病”，儿童不应该担心 COVID“对他们自己或他们未来的健康”的影响。
+所以说回答的答案是一定是这次的攻击是刚刚开始，全面化从内部瓦解。你比如说老班长、长岛哥我再说一遍，如果大卫、老班长、长岛哥、木兰是特务的话我也去当特务去，我不用他跟着我走，我跟他当特务。
 
-他说，“关闭学校等区域是错误的”，因为保持开放有利于教育、“社会联系和福祉”。
+都不是完人，都可能做错事，谁都有私心。前提是只要你灭共，什么都可以商量。第二你必须坚持唯真不破，你必须不能把手伸到战友的裤裆里，不能把手伸到战友的钱袋里。这几个原则只要别做，咱没有啥过不去的事儿。
 
-“我们真的应该优先考虑教育和那些最符合儿童利益的干预措施，”他说。
+共产党的分化离析那些东家长，一开始我要说的事情，所有中国人是全世界我看到背后说人坏话、颠倒黑白、谣言四起是最恶劣这个民族。共产党教了我们，把我们全洗脑了。
 
-根据 12 月 20 日的一项研究，美国CDC的数据还显示，在 2020 年首次实施大流行限制时，与心理健康相关的访问在 5 至 11 岁和与 2019 年的数据相比，12 至 17 岁的儿童为 31%。
+现在在我们爆料革命当中这个东西越来越少，但是还是存在的。这个Isobel用的就是共产党在当年延安前、延安后对国民党的一切的手段，一点都不错，颠倒黑白，制造仇恨，让你恨日本人，让你恨国民党，然后国民党日本人一杀，国民党死了100万，共产党出来了：我杀了日本人，我要接受所有的荣耀。
 
-有趣的是，麦克唐纳指出，他见过一些孩子“拒绝眼神交流，晚上尿裤子或尿床，不能去（朋友家）过夜——不能长时间离开他们的母亲。”
+这就是他要干的事情，所以说接下来的事情会很夸张，很夸张。
 
-另一方面，青少年摆脱了封锁限制，“因为他们已经接受了过去一年半的培训，所以他们被社交媒体、手机和 Zoom 学校所包围，他们甚至不想再出门了，” 他说。
+编辑整理：海贼王M.D.LUFFY；
 
-麦克唐纳呼吁政府和媒体公司制定一项“行为调节计划”，在该计划中，孩子们会面临“非理性、荒谬”的情况，例如：在 40 度的天气下在外面吃饭，不得不跑马拉松，或戴着口罩参加体育运动。
+字幕文件制作：小满；
 
-根据白宫网站上的 COVID 计划，截至 12 月 27 日，拜登政府建议：“太小不能接种疫苗”的儿童，应“在公共室内空间，包括学校，由接种疫苗的人包围并戴口罩”。 “对于那些达到年龄接种疫苗的 12 岁及以上的青少年，父母可以采取的最重要的步骤就是让他们接种疫苗。”
+视频制作及上传：Cindy；
 
-（点评：这一项政府建议，不仅将上千万少年儿童推向灾难，也是人们向政府问责的证据。）
+G-News发布：小满；
 
-截至 12 月 27 日，该网站称“全国超过一半的青少年已接种疫苗。”
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
 
-**参考资料：**[theepochtimes][Lockdown Policies and Mask Mandates Linked With Lower IQ in Children](https://www.theepochtimes.com/mkt_morningbrief/lockdown-policies-and-mask-mandates-linked-with-lower-iq-in-children_4177711.html?utm_source=Morningbrief&amp;utm_medium=email&amp;utm_campaign=mb-2021-12-27&amp;mktids=a458b144ed00a5e09fd02867a6547f36&amp;est=oN%2F%2B0XmpOetgav6uKgiyhIlr%2FLzu%2FFqvClx4ILI7FdqSvJof%2Fjm5dXDsw2g1wOULAUgyYg%3D%3D)
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
 
-* * *
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
 
-*审核：文乐*
-*校对 : 信心满满*
-*发布：信心的选择*
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/GNEWS_CH.-1.jpeg)
+YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
