--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,36 +1,18 @@
 ---
-title: 良心市民遇到慵懒政府 西安市民哀叹：政府让我们自生自灭
+title: 被中共病毒阻挡的亲情
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1794906/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795025/)
 
-撰稿/配图：东京樱花团/Ob
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1507.png)
-看中国2021年12月27日讯，近日，网传一位西安市民因出现发烧、头痛等症状，加上其工作单位有人被确诊阳性，他主动向社区等部门申请想去隔离，他说，“在这期间我是叫天天不应，叫地地不灵，雁塔区政府是放弃我们一家六口，让我们自生自灭。”
+作者：东京樱花团丨阿恩
+![](https://lh3.googleusercontent.com/bqQGMwb6ebPHHGk-vNl7MmZqptk09QjlLdGfjjjJzP1oSgwilVcp-UUAOPpbaFfAoK3_5l6f-cX9QaVbj_PDanz19sgflEqQyJeSIsYOTW6-bLtkDsR7tmw6gX9T1jNdFo-UWT3-)
+本港新冠肺炎出现首宗无外游的Omicron确诊个案，北上免检疫通关无期，港人返内地仍需检疫21日。农历新年将至，已有大批市民经深圳湾口岸北上，出现长长人龙。有学生向学校告长假提早与家人返深圳过年。其母解释，忧小区爆发影响出入境政策，故决定提早带小朋友北上。
 
-近期，陕西省西安市中共病毒（新冠病毒COVID-19）疫情爆发，12月23日起封城，市民均居家隔离，足不出户。该市民在主动申请去隔离的过程中，被主管部门当皮球踢，整个自述的最后，这位市民绝望地说，“希望大家能理解我，我有两个孩子，一个1岁，一个4岁，我现在情况很危急，我整个肺部很疼。他们还让我等，我不想死，我死了我孩子怎么办。对不起大家了！”
+爆料革命郭文贵先生多次向全球预警中共将在年底释放新病毒，如今Omicron病毒如期在全球传开，连中共统治下的香港也不能幸免。港府之前高调宣传通关在即，要求港人加强注射新冠疫苗，安装“安心出行”跟踪程序，现在又因Omicron病毒的出现而计划推后通关。中共病毒已经令中港两地封锁了近两年，两地严格而昂贵的隔离措施让人望而生畏，亲人间的联络只能依靠网络。而港府正是利用两地血浓于水的亲情编造通关谎言，骗港人接二连三地注射新冠毒疫苗，不少人没有等到通关已经命丧黄泉。郭文贵先生警告中共还会继续释放病毒，这预示着港府的通关大计将不断推后，中共一日不灭，中港两地定难水乳交融。
 
-推特网友“蛋蛋儿馍”12月25日贴一推文，一个网名“潇湘”的市民自述：“对不起各位，我是6-2-2304的。你们封楼是因为我的事情，我跟大家说下经过。” 我在科技二路西安光电园4楼公司上班，21号下午我发烧、头痛、眼痛、腹泻、咽痛，21日下午在自己房间自主隔离，晚上通过公司向防疫部门报告，22日凌晨公司通知有1人确诊。
+资料来源：[**通关无期｜学生请长假北上检疫等过年  家长：等通关，等唔到**](https://www.hk01.com/%E7%A4%BE%E6%9C%83%E6%96%B0%E8%81%9E/716979/%E9%80%9A%E9%97%9C%E7%84%A1%E6%9C%9F-%E5%AD%B8%E7%94%9F%E8%AB%8B%E9%95%B7%E5%81%87%E5%8C%97%E4%B8%8A%E6%AA%A2%E7%96%AB%E7%AD%89%E9%81%8E%E5%B9%B4-%E5%AE%B6%E9%95%B7-%E7%AD%89%E9%80%9A%E9%97%9C-%E7%AD%89%E5%94%94%E5%88%B0)
 
-22日早上，我口鼻流血，早上长安区疾控打电话给我，问了地址后说我属于雁塔，会转给雁塔。等到下午也没人联系我，我主动联系物业向社区报告，请求将我带走隔离，被推脱先做核酸。我又向12345热线报备。街办一会说我是C类，一会说我是B类，让我跟家人一起居家隔离并等通知，22日23点来了防疫人员进行了单采。
-
-23日上午，（他们）告诉我21号上午做的混采有异常，同时得知我公司又确诊了第2例，我还是请求他们将我带走集中隔离，被推先等核酸、继续和家人居家隔离。此时，离我上报已经两天过去了，街办还在研究，说同一办公室不算是B类是C类，同一个中央空调、核酸混检异常、症状这么明显都没关系。我公司其他没症状的都被隔离。而我这，雁塔不停的研究，我还是被告知继续和家人居家隔离、等消息。
-
-24日早上，我打110报警，打12345投诉（雁塔）渎职，并告诉街办今天不带走我家人，我将结束居家、自行离开。我一家老小6口人，有两个孩子，1岁和4岁。
-
-24日上午10点，雁塔防疫逼不得已、才接走了我的家人，当时他们只给我家人做了采样没给我采样。我从23日凌晨到现在再没采过核酸。给社区打电话要求采，说他们做不了主等雁塔疾控给采，而雁塔疾控说这是归社区管。
-
-24日下等1点多，22日的单采结果出来了，此时距离采样已过去37个小时，核酸结果全阴性。讽刺的是这阴性结果存活没过9小时，22点我妻子就被告知确诊。“在这期间我是叫天天不应，叫地地不灵，雁塔区政府是放弃我们一家六口，让我们自生自灭。”运气好你们没被感染那是他的防疫成果，运气不好感染了也是疫情太复杂没他们什么事，而且还可以晒苦劳。我们党就是这么对待他的人民的。
-
-晚上还有个有意思的事，得知家人感染我异常愤怒，我打110、打12345要求必须给我转运，我不相信雁塔所谓的防疫政策，我将自行离开去就医。打完后雁塔疾控就有人给我打电话说，他们是刚得到通知才知道有我们这一回事。
-
-我妻子已经确诊，社区和街办说他们没接到通知。早上给我安排了核酸，11点半进的小区到现在我联系不上。我可能只能自己下去，我下去我就违法了。再一个也会感染这栋楼，我实在是没办法了，我们没害过一个人，我也不想害大家。 最后他说，“希望大家能理解我，我有两个孩子，一个1岁，1个4岁，我现在情况很危急，我整个肺部很疼。他们还让我等，我不想死，我死了我孩子怎么办。对不起大家了！”
-
-共产党对待人民总是往最坏处想，其实哪个良民是无赖？人民总把政府当父母想，其实哪个政府抚养过你？流氓无产者所想的只不过是如何攥好手中的权力，所谓防疫都是掩人耳目的把戏，所谓防疫成效都是用垒垒白骨堆砌出来的假像罢了。
-
-信息来源：[西安市民哀叹：政府让我们自生自灭(图)](https://m.secretchina.com/news/gb/2021/12/27/993395.html)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
+*校对：东京樱花团 / 文小白*
+*发布：东京樱花团 / 平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
