--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,31 +1,40 @@
 ---
-title: 加拿大总理称中共玩弄民主国家 致使西方国家分裂
+title: 中共批准腾盛的新冠鸡尾酒疗法用于成人和青少年
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1795133/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1795231/)
 
-作者：纽约香草山农场-蓝天大海
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-12月25日，加拿大总理贾斯汀-杜鲁多在接受加拿大媒体采访时表示，西方国家应该联合起来对抗中共，以防止其利用商业利益，挑动民主国家之间相互对抗。
-![](https://assets.gnews.org/wp-content/uploads/2021/12/截屏2021-12-27-下午9.31.32.png)
-杜鲁多表示，民主国家对中共国市场的一味逐利，导致其牺牲政治理念，而让位于经济利益。中共经常以公开市场竞争的方式，非常巧妙地玩弄西方国家，让西方国家为各自利益而互相对抗，导致分裂。志同道合的西方民主国家应该形成“统一战线”，反对中共日益增长的“强制外交”。
+拟稿：金生水
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image1-23.jpg)
+图片来自网络
 
-当评论习近平独裁下的中共国时，杜鲁多说，中共国已不再是十年前，甚至五年前，所想象的样子了。他还表示，加拿大将继续在多方面挑战中共，包括人权、香港民主、支持记者以及不干涉亚洲独立国家等事物。
+路透社近日报道，中共国医疗产品监管机构周三表示，已批准将腾盛博药的中和抗体混合物用于治疗中共病毒，这是该国首个针对该病毒的此类治疗方法。
 
-参考链接：[Trudeau says China ‘playing’ democracies against each other, urges ‘united front’](https://globalnews.ca/news/8466217/trudeau-china-countries-need-united-front/)
+腾盛博药在一份报告中说，根据三期临床试验的最终结果，BRII-196/BRII-198 的组合显示，在非住院中共病毒患者中，有发生严重疾病的高风险的住院和死亡减少了 80%。
 
-![This image has an empty alt attribute; its file name is 12%E6%9C%88%E5%B0%8F%E5%9B%BE.jpg](https://assets.gnews.org/wp-content/uploads/2021/11/12%E6%9C%88%E5%B0%8F%E5%9B%BE.jpg)
+中共国家药品管理局说批准腾盛的药物用于治疗成人中共病毒轻症和12-17岁未成年人住院或死亡风险高的“正常类型”疾病。
 
-总编：文真
-编辑：文真
-校正/发稿：呼吸的雾霾（文小呼吸）
+腾盛博药首席财务官李安康表示，关于奥米克戎变体如何影响抗体鸡尾酒的结果预计将在大约两周后出来。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+腾盛博药股价一度上涨 13.7% 至 48.75 港元（6.25 美元），然后在周四回落至收盘下跌 0.5%。
+
+该公司已在美国提交了该治疗的紧急使用申请，其中再生元制药公司和礼来的类似产品已获得批准。
+
+博药将与潜在合作伙伴一起在中国和美国以外的地区寻求治疗的监管许可，优先考虑已经开始该产品三期试验的国家，如南非、巴西和墨西哥，李安康在新闻发布会上说。
+
+李安康说，博药还在研究使用该药物预防中共病毒。
+
+该公司表示，在获得批准之前，腾盛博药的治疗方法已在中国近 900 名中共病毒患者中使用。
+
+这款享受中共当局政策绿灯快速获批的特效药待定售价能有8000元，腾盛博药股票也因此药获批上市而大涨，不知道这家公司背后是中共哪个权贵家族？从开始实验室研究到获批上市，这款药居然只用了不到20个月的时间，笔者认为从这个研发速度来看，说它的安全性要打一个大大的问号都算是抬举它了，中共不仅谋财，还要害命啊。
+
+参考链接：
+
+[China approves Brii Biosciences antibody COVID treatment](https://www.reuters.com/business/healthcare-pharmaceuticals/china-approves-brii-biosciences-covid-19-treatment-2021-12-08/)
+
+[焦点分析 | 中国首个新冠“特效药”获批上市，腾盛博药能否成为抗感染巨头？](https://www.sohu.com/a/506856370_114778)
+
+[【澳喜文章1】](https://gnews.org/zh-hans/author/aujenny/)[【澳喜文章2】](https://gnews.org/zh-hans/author/himalaya-australia/)
+![此图像的alt属性为空；文件名为澳喜图标2-1-3.jpg](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%BE%B3%E5%96%9C%E5%9B%BE%E6%A0%872-1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
