--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,30 +1,30 @@
 ---
-title: 樱花灭共诗——媚上欢（新韵）
+title: 2021/12/26 墙内世界
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1795101/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1795192/)
 
-撰稿：东京樱花团/曲非烟
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1510.png)
-名缰利锁役庸官，
+1. 12月22日，陕西西安“全域封闭”前，市民紧急抢购生活物品，场面十分混乱。
+2. 12月23日，陕西西安。男子与防疫人员互殴，多名工作人员参与殴打。
+3. 12月23日，四川达州。货车失控连撞路口多辆小车，造成多人受伤。
+4. 12月23日，重庆长寿一小区发生爆炸。疑因情感纠纷男子点燃引爆物致情侣两人身亡。
+5. 12月23日，浙江温岭。一工厂突发大火，形成巨大烟柱直冲云霄。
+6. 12月22日，福建厦门，一外卖小哥因电动车被交警查扣，直接躺在马路中间。
+7. 12月23日，四川成都。四川十余餐馆用“青花椒”三字做招牌被起诉索赔。
+8. 12月20日，广西融安。融安县教育局发通知，禁止师生过洋节，“希望弘扬传统文化”。
+9. 江苏江阴，男子整理母亲遗物发现20年前600万存单，取钱时银行质疑是假的欲销毁。
 
-夙夜忧劳媚上欢。
 
-奥委衷心夸党厉，
+* * *
 
-纸媒翻手斥国奸。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-百金会聚搏群丑，
 
-十亿债消封恶言。
+编辑：【英国伦敦喜庄园编辑部】
 
-狗盗鸡鸣合圣意，
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
-吮痈舐痔亦回甘。
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1511.png)
-*插图：东京樱花团/闪闪
-校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%A8%B1%E8%8A%B1-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
