--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,19 +1,31 @@
 ---
-title: 【中日财经爆】中共国2022年退休人数将反超就业人数
+title: 应对中俄地缘政治威胁 拜登签署7700亿美元国防授权法案
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797598/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1797653/)
 
-撰稿：东京樱花团/盐和光
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1566.png)[图片来源](http://www.ftchinese.com/story/001093747?full=y&amp;archive)
-12月28日网易新闻报道，2022年退休人口第一次反超新就业人口，明年起，劳动力短缺时代悄然来临，2018—2021年，新增就业人口比例，分别达到了139万、373万、610万、722万人，就业形势越来越难，2022年，直接反过来，从岗位缺口700多万，变成了劳动力缺口720万，只能用大反转来形容。
+撰稿—八木
+校对/上传—无明逆流
 
-2019年底统计数字，退休将达到近1亿人（而60周岁以上人口达2.6亿）；外加学龄前儿童1亿人、小学生1亿人、中学生5000万人、高中生2500万人、中技以上人员2500万人，加上残疾人1亿左右；合计不工作人数＝5亿人。现在中国人口13亿，按供养（军队300万、公务员700万、事业单位4000万、编制外人员3000万）0．8亿人，也就是5.6亿养0.8亿，供养关系7：1。中共国18.70%是60周岁及以上的老年人口，总数达到了2.6亿人，60年的婴儿潮，导致2022年将迎来大规模的退休高峰期，而2022年的新就业人口约为768万人，意味着明年退休的人口，很可能比就业的人口要多。
+据路透社报道，拜登于白宫当地时间27日签署了价值7700亿美元的2022财年国防授权法案，法案较之前拜登提交的国防开支计划多出250亿美元。此前该法案已在美国国会参众两院通过。
 
-消息来源：[2022年，“退休人口”将超过“新就业人口”，意味着什么？](https://3g.163.com/dy/article/GS9SNAVH0552I361.html)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/WhatsApp88.44.29-PM.jpeg)图片取源网络
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%9C%80%E6%96%B0%E7%89%88%E6%A8%B1%E8%8A%B1%E7%BD%91%E5%9D%80.jpg)
+报道称，拜登在签署该法案后发表声明，“法案为军人及其家属提供了至关重要的福利，增加了诉诸司法的机会，还包括支持我们国家国防建设的关键机构。”
+
+本月，《2022财政年度国防授权法案》正式在参众两院获得通过，这份法案批准了7700亿美元的军费开支，包括提高美国军人工资，授权实施一系列国防项目以及应对全球“地缘政治威胁”等战略。
+法案计划为美国国防项目提供总计7680亿美元的资金，拨付国防部7400亿美元，其中研发经费投入1120亿美元，用于研发测试各种颠覆性技术与先进武器装备。比如，微电子技术、人工智能技术、军用5G技术、高超音速武器、海军即时打击武器、空军先进快速反应武器等。
+
+![](https://assets.gnews.org/wp-content/uploads/2021/12/WhatsA3.40-PM.jpeg)图片取源网络
+
+**中俄地缘政治威胁极速加剧，美国防军费连年上涨。**
+
+尽管美国已经从阿富汗和中东撤军，但新财年国防军费总额相较2021年的7400亿美元仍有所上涨。
+在应对中共方面，新财年国防法案中包含大量涉及台湾的内容，包括建议美国国防部邀请台湾参与“2022年环太平洋军演”，协助台湾制定非对称(军事)防御能力计划。法案要求美防长在明年2月15日之前提交一份加强美国国民警卫队与台湾合作的可能性及合理性报告，还要求美国国家情报总监提交“大陆破坏台海和平稳定”的行动报告，并列出美国为应对此类问题作出的行动。
+
+在涉及乌克兰方面，法案还将向乌克兰武装部队拨款援助3亿美元，以应对俄罗斯对乌克兰的入侵。
+
+相关新闻：[美国总统拜登签署7,700亿美元国防授权法案 军费开支较上年增加约5%](https://www.reuters.com/article/us-biden-ndaa-defence-budget-1228-idCNKBS2J702E)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
