--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,23 +1,41 @@
 ---
-title: 停止接种新冠疫苗的几点理由
+title: 中国政府最新“清洁规定”迫使达美航空在半空中调头
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1797590/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1797608/)
 
-字幕翻译：Jenny
-字幕听写/添加：一灯一智
-**一，高接种率的英国在Omicron变异病毒面前溃不成军，再次佐证疫苗赶不上病毒变异的脚步**。英国首相鲍里斯·约翰逊自己都很清楚：“新冠疫苗即不能保护你不染上这种疾病，也不能保护你不把它传给别人”。
+#### 【雅典娜快讯】，紧贴时事脉搏
 
-据英国政府12月24日公布的疫情数据显示，新增确诊病例超过12万例，是疫情暴发以来的日感染最高纪录，伦敦是英国疫情最严重的地区。截至12月19日大约每20个人中有1人确诊感染病毒。而英国12岁以上人群已接种两剂新冠疫苗比例高达82%，并且有超过56%已接种过加强针。
+- ![](https://assets.gnews.org/wp-content/uploads/2021/12/delta_airbus_a350_900_nrt_source_rob_finlayson.jpg)**图片来源：**aviationweek.com
 
-**二，美国著名的[彼得·麦卡洛博士](https://gnews.org/zh-hans/1766276/)医生告诉我们这是一场由“权威人士的渎职引发的灾难”**。他在视频中说：有超过4000名美国人死亡，欧洲有超过10，000人死亡，他们是在接种疫苗后的第二或第三天死亡的。载入历史陈述将是“权威人士的渎职错误行为导致这些死亡”。他还说据他所知澳大利亚每人计划有14针新冠疫苗，也就是7年内每6个月一针。
 
-澳大利亚新南卫视州首席卫生官凯丽·钱特医生（Kerry Chant)更是不加掩饰地公开讲：“在未来，我们需要习惯于接种COVID疫苗，加强剂针、重复针剂都将是其中的一部分。我们可以向你们保证，澳大利亚联邦政府已经为2022年购买了大量的疫苗，疫苗会有一个定期接种周期，重新接种疫苗周期取决于我们对免疫力挥发的时间有了更多的了解。**这些所谓的权威人士不知道病毒变异的速度和方向却能准确地为民众预定未来几年的疫苗，他们的科学依据究竟是什么？**
+#### 编译：小红帽
 
-**三，关闭疫苗项目的极限是大约25到50人死亡。**1976年的猪流感，25人死亡，他们关闭了疫苗项目，对于流感，当他们发现有53人因接种疫苗而死亡时，他们就质疑疫苗。视频中的权威人士说：“我们可以证明这种新冠疫苗在72小时内有45000人死亡”。
+根据RT 12月27日报道，**美国主要航空公司达美航空指责中国政府最新的新冠病毒（Covid-19）清洁规定，使飞往上海的飞机在半路上调头。**
 
-推荐文章：[彼得·麦卡洛博士谈羟氯喹作为治疗新冠的有效药物被打压的事实](https://gnews.org/zh-hans/1766276/)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/澳喜图标2-1-3.jpg)
+达美航空突然停止了飞往上海的服务，以至于一架从西雅图飞往中国的航班调头。据说，一些乘客因新冠病毒检测和签证过期而滞留。
 
+达美航空周一表示，最近的空中调头是由上海浦东国际机场与大流行病有关的新清洁规定所引起的。该航空公司在一份声明中告诉美联社，新规定“要求大大延长地面时间，这对达美航空的运营来说是不可行的”。
+
+达美航空是美国第二大航空公司，该航空公司没有详细说明规则的变化是什么，也没有说明为什么有必要召回一个已经在空中飞行了约6个小时的航班。该航空公司已经取消了周四前从西雅图飞往上海的航班。
+
+据报道，被取消的航班在上周二进入俄罗斯领空时向西雅图调头。该航班本应在首尔降落，以更换机组人员，然后继续飞往上海。
+
+达美航空发言人表示，该规则的改变是在航班离开西雅图后作出的，而中国媒体报道说，上海浦东官员否认最近对入境要求有任何更改。
+
+据台湾 “中央社”报道，台湾航空公司长荣航空已暂停从高雄和台北到上海浦东的航班，一直持续到2月3日。
+
+该航空公司援引了对入境飞机进行更彻底消毒的新要求。该新要求已于周五实施。长荣的一位官员告诉CNA，新规定将导致返回台湾的航班延迟5个小时。
+
+新闻来源：[‘Cleaning rules’ force US airline to turn back flight midair — RT World News](https://www.rt.com/news/544539-delta-air-turns-back-china-flight/)
+
+***发布：小红帽***
+
+**更多资讯，请关注：****
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
