--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,27 +1,23 @@
 ---
-title: 近25%的海军军舰船员感染中共病毒
+title: 停止接种新冠疫苗的几点理由
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1797587/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1797590/)
 
-编译：花岗岩
-![](https://assets.gnews.org/wp-content/uploads/2021/12/图片1-146.png)
-图片来源：网络截图
+字幕翻译：Jenny
+字幕听写/添加：一灯一智
+**一，高接种率的英国在Omicron变异病毒面前溃不成军，再次佐证疫苗赶不上病毒变异的脚步**。英国首相鲍里斯·约翰逊自己都很清楚：“新冠疫苗即不能保护你不染上这种疾病，也不能保护你不把它传给别人”。
 
-据美联社华盛顿12月28日报道，据不愿透露姓名美国国防官员称，一艘美国海军军舰密尔沃基号上的100多名船员中的的大约二十几名水手，或者说大约25%的船员的中共病毒检测呈阳性，使该舰周一在古巴关塔那摩湾海军基地的港口被搁置，目前受感染的水兵人数保持相对稳定。
+据英国政府12月24日公布的疫情数据显示，新增确诊病例超过12万例，是疫情暴发以来的日感染最高纪录，伦敦是英国疫情最严重的地区。截至12月19日大约每20个人中有1人确诊感染病毒。而英国12岁以上人群已接种两剂新冠疫苗比例高达82%，并且有超过56%已接种过加强针。
 
-密尔沃基号是一艘较小的隐形战斗舰，是今年第一艘不得不中断海上部署的海军舰艇。它于12月14日从位于佛罗里达州杰克逊维尔的梅波特海军基地开始部署，并在预定的港口访问时停了下来。该舰当时正驶入美国南方司令部地区。
+**二，美国著名的[彼得·麦卡洛博士](https://gnews.org/zh-hans/1766276/)医生告诉我们这是一场由“权威人士的渎职引发的灾难”**。他在视频中说：有超过4000名美国人死亡，欧洲有超过10，000人死亡，他们是在接种疫苗后的第二或第三天死亡的。载入历史陈述将是“权威人士的渎职错误行为导致这些死亡”。他还说据他所知澳大利亚每人计划有14针新冠疫苗，也就是7年内每6个月一针。
 
-与此同时，另一艘军舰哈尔西号驱逐舰在本月早些时候因另一次爆发而不得不推迟从夏威夷珍珠港到圣地亚哥的母港迁移，因为相当数量的船员感染了中共病毒。该舰最后能够在周日离开夏威夷。这次搬迁不是部署，而是将船员转移到一个新的母港。一位匿名的海军官员说，大约三分之一的哈尔西号船员的中共病毒检测呈阳性，大多数人只有轻微的症状或根本没有。一艘驱逐舰大约有300名船员。
+澳大利亚新南卫视州首席卫生官凯丽·钱特医生（Kerry Chant)更是不加掩饰地公开讲：“在未来，我们需要习惯于接种COVID疫苗，加强剂针、重复针剂都将是其中的一部分。我们可以向你们保证，澳大利亚联邦政府已经为2022年购买了大量的疫苗，疫苗会有一个定期接种周期，重新接种疫苗周期取决于我们对免疫力挥发的时间有了更多的了解。**这些所谓的权威人士不知道病毒变异的速度和方向却能准确地为民众预定未来几年的疫苗，他们的科学依据究竟是什么？**
 
-第三舰队发言人肖恩·罗伯逊海军中校说，船员们几乎100%地接种了疫苗，没有人被送往医院。已为船员提供了疫苗加强针。一些样本已经被测试过，都是奥米炕变体。
+**三，关闭疫苗项目的极限是大约25到50人死亡。**1976年的猪流感，25人死亡，他们关闭了疫苗项目，对于流感，当他们发现有53人因接种疫苗而死亡时，他们就质疑疫苗。视频中的权威人士说：“我们可以证明这种新冠疫苗在72小时内有45000人死亡”。
 
-海军在周五的一份声明中说，密尔沃基号的船员 “100%接受了免疫”，所有对中共病毒检测呈阳性的人都在船上被隔离，远离其他船员。“一部分 ”受感染的人有轻微的症状，具体的中共病毒变体还不清楚。由于高度传染性的奥米炕变体，中共病毒病例在全国范围内激增。
+推荐文章：[彼得·麦卡洛博士谈羟氯喹作为治疗新冠的有效药物被打压的事实](https://gnews.org/zh-hans/1766276/)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/澳喜图标2-1-3.jpg)
 
-在去年病毒爆发的最初几个月，其他几艘海军舰艇也退出部署。该病毒的第一次大规模军事爆发发生在一艘海军军舰上，即西奥多·罗斯福号，这是一艘在太平洋地区作战的航空母舰。罗斯福号在关岛被搁置了近两个月，4800名船员中有1000多人检测出阳性。一名水手死亡，全体船员经历了数周的轮流隔离，使船上有足够的水手保持安全和运行。
-
-根据海军发布的最新数据，超过98%的现役水兵已经完全接种了疫苗。
-
-新闻来源：[Officials: Nearly 25% of Navy warship crew has COVID-19](https://apnews.com/article/coronavirus-pandemic-health-jacksonville-us-navy-cb7d190b7c1c1c52f5441b56740d44de)
 
  
 
