--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,18 +1,20 @@
 ---
-title: 杨贝贝的这个报道 伤害了我们所有华人
+title: 伊莎贝拉事件影响力大于当年印尼排华的起因报道
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797914/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797953/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
 12月22日，郭文贵先生在GTV大直播指出：
 
-杨贝贝采访郭先生的报道是为中美政客勾兑，和让海外华人、爆料革命成为中美关系问题的替罪羊做铺垫。杨贝贝作为背井离乡的华人后裔，竟然为从不爱自己民族的中共来诋毁爆料革命，对此她将终身悔恨不已。郭先生表示，他会不惜生命和荣誉，坚持唯真不破，把中共在全球渗透的严重性展示于众。
+伊莎贝拉是在帮中共制造海外华人的最大危机，小骂大帮忙，最终把新中国联邦定性为“暴力分子”。当年印尼排华就是从媒体制造危机开始，导致无数华人惨死。作为媒体报道，她只字不提中共对西方的渗透和威胁，却把中美交恶全都转嫁给新中国联邦人，让我们成为牺牲品。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
