--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,20 +1,21 @@
 ---
-title: 雅典娜时报-第156期
+title: 新中国联邦将成最后赢家
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1797775/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1797898/)
 
-**《雅典娜时报》汇聚全球新闻时事**
+撰稿：纽约香草山教育部-Noemi
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+12月27日，郭文贵先生在盖特的最新视频中表示，世界即将形成美、欧、俄、中“四国演义”的混战格局，而新中国联邦将会成为最终的赢家。为了这一天的早日到来，我们需要更强大的经济及媒体实力，并需要有更多的新战友加入到全球灭共的事业中来。
 
-#### 编辑：精靈藍
-排版：小蚂蚁614
-![](https://assets.gnews.org/wp-content/uploads/2021/12/时报1.jpg)![](https://assets.gnews.org/wp-content/uploads/2021/12/时报2-3.jpg)
-发布：kk
+据郭先生爆料，目前欧洲政界已达成共识，认为同主动介入相比，令中共自行倒台将会更有利于欧洲的未来。同时，他们认为攻打台湾将是中共最后的疯狂。据此策略，欧洲政界采取了相关行动。
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场](https://discord.gg/KQQVvwBNvm)Discord
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+其中一条就是在外交、媒体等发声渠道上假意麻痹中共，令中共高层更加自大、丧失理智。目前，中共党内的鹰派高层已经决定要在欧洲的经济、民生上增加巨大的话语权，并直接向美国发起挑战。欧洲政客认为，要让中共及俄罗斯继续犯下这样的严重战略错误将更有利于欧洲的未来发展。
+
+而对于新中国联邦而言，发展出更强大的经济、媒体体系，让更多的战友加入进来，将会显得至关重要。因此，新中国联邦的全体战友需要为加强加大我们的媒体平台、经济体系而不断努力，并促使更多的新战友加入进来，我们需要发掘出更多的真战友和优秀人才，让新中国联邦变得更加强大。
+
+郭先生最后总结道，在这个关键的历史节点上，新中国联邦才会真正地显现出自身的体制优越性，我们必须谨慎把握时机。就如同《三国演义》中的司马懿一样，新中国联邦一定会成为“四国演义”之后的最终赢家。[https://gettr.com/post/pksh508216](https://gettr.com/post/pksh508216)
+
+编辑/校对/发稿：菩提树
 
  
 
