--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,25 +1,38 @@
 ---
-title: 甲骨文超级计算机的模拟结果显示：中共病毒高度适应人类感染
+title: 12/28每日播报｜西班牙电信采购爱立信5G设备以取代部分华为产品
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1797754/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1797882/)
 
-翻译：zzballack
-上传：无明逆流
+**By:[秘翻新闻](https://gtv.org/broadcast/watch/61cad3bc00f9a119180c4dcf)**
 
-据《国家脉动》（National Pulse）12月27日报道，利用甲骨文超级计算进行的模拟显示，中共病毒“高度适应”人类感染，从而驳斥了该病毒来自自然、从野生动物跨种传播到人类的说法。
-![](https://assets.gnews.org/wp-content/uploads/2021/12/WhatsAp231.12-PM.jpeg)
-正如澳大利亚记者夏里·马克森 (Sharri Markson)在其新书《武汉到底发生了什么》（What Really Happened In Wuhan）所揭示的那样，澳州福林德斯大学 (Flinders University)教授和生物技术公司Vaxine的研究主任尼古莱·佩特洛夫斯基（Nikolai Petrovsky）博士使用甲骨文超级计算机的“仿真建模（in silico modeling）”方法来确定中共病毒的原始宿主。
+**2021-12-28**
 
-支持”自然来源”理论的人–包括许多被中共收买的科学家–都认为中共病毒的宿主是一只蝙蝠，该动物将病毒传染给了在海鲜市场的人。但佩特洛夫斯基的研究结果似乎确定了人类是中共病毒的原始宿主，驳斥了病毒从动物传到人的说法。
+据路透社12月27日报道，西班牙电信（Telefonica）的一位消息人士周一表示，该公司已经从瑞典制造商爱立信购买了5G网络设备，以取代其在西班牙推出的部分华为设备，该消息证实了西班牙平面媒体《拓展报》此前的报道。
 
-为此，佩特洛夫斯基的团队利用超级计算机分析了不同的ACE2受体和刺突蛋白，前者可以让冠状病毒进入细胞并进行繁殖，后者让病毒抓住人类的呼吸道细胞。佩特洛夫斯基解释说：“我们试图找到中共病毒的钥匙最适合开哪种锁。你可以尝试将中共病毒的刺突蛋白结构与来自不同动物的所有ACE2受体结构逐个匹配，看看哪一个最适合，就像解决一个拼图一样。”
+据该消息人士称，更新下一代移动网络设备是西班牙电信在2019年宣布的供应商多样化战略的一部分。
 
-该小组上传了来自各种潜在动物宿主的ACE2基因序列，包括蝙蝠、小鼠和果子狸，并在2020年3月前运行模拟。正如《武汉到底发生了什么》所指出的那样：“很快就有了结果，但让佩特洛夫斯基感到焦虑的是，人类位于这份名单的最前列。他说：‘这不是我们所期望的，因为传播中共病毒的动物宿主本应排在名单的前列。这提出了一个疑问，因为数据表明中共病毒的刺突蛋白已经独特地进化到可以结合和感染表达人类ACE2的细胞。通常情况下，一种病毒不应该能够进化到与它从未见过的锁完全吻合，然而这数据告诉我们，中共病毒的刺突蛋白设计完美，已完全适应了人类的ACE2受体。”
+拓展报称，该电信公司最初推出了一些已经购买的华为设备，随后再寻求替代设备更换华为产品。
 
-最终，佩特洛夫斯基的团队2021年6月在权威的《科学报告》 (Scientific Reports) 杂志发布了这项研究报告。报告说：“值得注意的是，中共病毒的刺突蛋白对人类的ACE2受体具有最高的整体结合能量，大于所有其他测试物种，包括蝙蝠，即假定的病毒来源。这表明中共病毒是一种高度适应人类的病原体。这一发现特别令人惊讶，因为通常情况下，一种病毒对其原始宿主物种的受体具有最高的亲和力，而对任何新宿主的受体的初始结合亲和力较低。”
+这位西班牙电信的消息人士拒绝透露该公司从爱立信购买设备的数量，以及购买时间。
 
-原新闻：[Oracle Supercomputer: COVID-19 ‘Highly Adapted’ for Human (Not Bat or Pangolin) Infection.](https://thenationalpulse.com/2021/12/27/oracle-supercomputer-supported-lab-leak/)
+华为和爱立信的西班牙部门没有立即回应评论请求。
 
+西班牙电信2019年所做的替换华为决定，正值中共国的华为被卷入美国和中共国政治紧张局势的中心。
+
+美国称华为的设备可能被中共国政府用于间谍活动。华为和中共国政府多次否认了这些指控。
+
+西班牙电信公司两年前宣布供应商多元化战略时，称该决定纯粹是技术性的，没有任何证据支持美国关于华为设备构成安全风险的指控。
+
+郭文贵先生曾指出，华为并非与军方合作，而是实实在在的军工企业，华为就是解放军。孟晚舟为中共特务，并且有特务编号。
+
+秘翻新闻主编宝宝编译报道。
+
+发布:星星
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2021/12/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
