--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,14 +1,14 @@
 ---
-title: 共产党这帮孙子 这次攻击是刚刚开始
+title: 运动员参加中共冬奥会是履行签约合同
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797945/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797993/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
-12月22日，郭文贵先生在GTV大直播指出：
+12月19日，郭文贵先生在GTV大直播指出：
 
-中共还将会对新中国联邦有大量的渗透和分化，通过内部瓦解和外部造谣，在浑水摸鱼中，达到他们险恶的目的。针对近期攻击老战友的行为，郭先生强调：一：人无完人，只要真心灭共，一切可谈。二：必须坚持唯真不破，绝不允许把手伸进战友的裤裆和钱袋子里。一定要做好充分的准备，来应对中共新一轮的攻击。
+美国的企业和运动员会去参加冬奥会，是因为早在多年前就已经签了商业合同，人家去不是参加中共的冬奥会，人家是去履行合同。全世界去冬奥会的国家，不会超过30个，都是中共长期蓝金黄，输送利益的国家。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
