--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,14 +1,14 @@
 ---
-title: 七哥呼吁被欺骗的战友起诉Lsobel 否则后果很严重
+title: 解决疫苗问题的良药唯有青蒿素和伊维菌素
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797924/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797975/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
 12月22日，郭文贵先生在GTV大直播指出：
 
-被伊萨贝拉欺骗釆访过的战友们一定要立即釆取行动，去法院起诉她。否则，沉默会使这些战友们被定为暴力分子，未来会对爆料革命、新中国联邦造成巨大威胁。
+靠新中国联邦停止全人类75亿疫苗灾害是不可能的，新中国联邦是起决定性杠杆作用，告诉大家真相。当初支持或已打疫苗的，和现在反对疫苗的，已经完全逆转。不看政治多疯狂，要看民心民意。没有谁可以逃过疫苗惩罚。青蒿素、伊维菌素绝对是清除疫苗的唯一良药，得过的人认真吃药，同时检查，100%没问题。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
