--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,14 +1,14 @@
 ---
-title: 解决疫苗问题的良药唯有青蒿素和伊维菌素
+title: 共产党和海外媒体对新中国联邦是典型歧视 我们倾家荡产起诉他们
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797975/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1798041/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
 12月22日，郭文贵先生在GTV大直播指出：
 
-靠新中国联邦停止全人类75亿疫苗灾害是不可能的，新中国联邦是起决定性杠杆作用，告诉大家真相。当初支持或已打疫苗的，和现在反对疫苗的，已经完全逆转。不看政治多疯狂，要看民心民意。没有谁可以逃过疫苗惩罚。青蒿素、伊维菌素绝对是清除疫苗的唯一良药，得过的人认真吃药，同时检查，100%没问题。
+伊莎贝拉和背后的实际操控人中共，高傲的认为，这套组合拳打下去，新中国联邦根本没能力反击，再利用媒体的权威，打压战友，这是典型的种族歧视。郭先生强调：如果我们不全力反击，就会被扣上无数次这样的帽子，把我们定性为暴力分子和邪教分子。因此，新中国联邦及受歧视的战友会发起全球范围内的起诉，与不良媒体抗争到底。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
