--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,23 +1,43 @@
 ---
-title: 超级计算机模拟结果推翻了中共病毒自然来源说
+title: 莫迪宣布明年起为青少年接种中共病毒疫苗
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1797765/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1797897/)
 
-#### 撰稿：彩虹
+**【雅典娜快讯】，紧贴时事脉搏**
+![](https://assets.gnews.org/wp-content/uploads/2021/12/111-1.png)图片来源：Justin Lane—EPA-EFE/Shutterstock
+翻译：George Warshing
+编辑：Mttfly
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2021/12/图片1-2-4.png)图片来源：自然科学报告
-12月27日，《国家脉动》调查记者娜塔莉·温特斯（Natalie Winters）发布了文章，指甲骨文公司（Oracle）的超级计算机进行的模拟结果显示，中共病毒（COVID-19）“高度适应”人类感染，从而推翻了该病毒是通过野生动物蔓延到人类的自然来源说。
+鉴于奥密克戎病例在印度国内的增长，总理莫迪（Narendra Modi）在强调预防的重要性时宣布，从明年1月3日起为15-18岁的青少年接种疫苗。
 
-正如澳大利亚知名记者、主播莎莉·马克森（Sharri Markson）在《武汉到底发生了什么》中所揭示的那样，弗林德斯大学（Flinders University）教授兼澳大利亚生物科技公司Vaxine研究主任尼古拉·彼得罗夫斯基（Nikolai Petrovsky）博士使用甲骨文超级计算机的“电脑模拟（In silico modelling）”方法来确定中共病毒（COVID-19）的原始宿主。
+一名认为接下来应给5岁以上的儿童接种疫苗的儿科医生，欢迎莫迪新宣布的对15-18岁年龄段的青少年接种疫苗的政策。
 
-彼得罗夫斯基的研究结果似乎确定了人类才是中共病毒（COVID-19）的原始宿主，削弱了该病毒从动物转移到人类的理论，而应该是该病毒直接起源于人类。
+德里恒河爵士医院的儿科肺病学家迪伦·古普塔（Dhiren Gupta）博士告诉亚洲国际新闻（ANI）：“这是一个受欢迎的决定。下一步的计划是应该为5岁以上的儿童接种疫苗，应允许儿科医生在他们的诊所为这些儿童接种疫苗。”
 
-最终，彼得罗夫斯基的团队于2021年6月份在著名的《自然科学报告》杂志上发表了该研究成果，题为《[跨物种的刺突蛋白ACE2结合亲和力的电脑模拟比较：对SARS-CoV-2病毒可能性起源的意义（In silico comparison of spike protein-ACE2 binding affinities across species; significance for the possible origin of the SARS-CoV-2 virus）](https://www.nature.com/articles/s41598-021-92388-5)》。
+他补充说：“我们不仅应该为13岁以上的青少年注射疫苗，还应该针对5岁以上的儿童。这应该是我们的下一个计划。如果我们想加快疫苗接种过程，应该允许所有儿科医生在他们的诊所为这些儿童接种疫苗。”
 
-**新闻来源**
+古普塔说，让这个年龄段的大多数儿童去儿科诊所注射疫苗，“而不是将这项工作限定于少数疫苗接种中心”，可以加快接种过程。
 
-[Oracle Supercomputer: COVID-19 ‘Highly Adapted’ for Human (Not Bat or Pangolin) Infection](https://thenationalpulse.com/2021/12/27/oracle-supercomputer-supported-lab-leak/)
+古普塔博士还表示，应采用比莫迪总理所宣布的时间更早的日期，向医疗保健和防控疫情一线的工作人员提供“预防剂量”的疫苗。
+
+“但为什么要等到1月10日呢？在疫情期间每一天都很重要。我们知道奥密克戎病毒正在快速增长，这种病毒的变种会来到我们身边。鉴于加强剂量的疫苗需要大约三周才能产生足够的抗体，因此加强针应该在两三天内开始。从人口数量来看，我们应尽快开始接种疫苗。”
+
+莫迪还表示，医疗保健和防疫一线的工作人员在对抗Covid-19和维护国家安全方面做出了巨大贡献，从明年1月10日起，政府将给他们注射“预防剂量”的疫苗。他说：“注射预防剂量疫苗的决定将增强医护人员和抗疫一线工作者的信心。”
+
+他还说，患有合发症的老年人也可以根据医生的建议选择预防剂量的新冠疫苗。
+
+莫迪总理说，该国61%的成年人口已完全接种了疫苗，其中90%已接种第一剂。印度于今年1月16日开始了疫苗接种活动。
+
+**原文链接：**[After PM Modi’s announcement of vaccines for teens, ‘precaution dose’, expert says this](https://www.hindustantimes.com/india-news/pm-modi-announces-vaccines-for-teens-precaution-dose-expert-lists-next-plan-101640476787135.html)
+
+**发布：**去中心化Math
+**
+更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
