--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,20 +1,18 @@
 ---
-title: 大兴是重点清城地点
+title: 共产党必死无疑
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797965/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1798031/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
 12月19日，郭文贵先生在GTV大直播指出：
 
-北京会像08年奥运会一样清城，各国官员会从大兴机场降落，周边已经布置40万重兵。北京到张家口，沿途一切不符合中共要求的全部清空，就跟朝鲜一样。习怕到什么程度？北京市核心地区全部布置红旗反导弹系统，习怕的是内乱和斩首。
+中共不具备称霸全球的条件，在技术与集权方面，比不上苏联的列宁时期。也不具备美国快速的工业生产能力，以及影响全球的金融体系。这些决定独霸一方的关键因素，中共都不具备。中共还在继续折腾，冬奥会来的国家不会超过30个，将会彻底失败，必死无疑。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
