--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,48 +1,60 @@
 ---
-title: 即使玩假擀面杖经济,被绑架的西方经济也得跟中共一上一下
+title: 川普对疫苗的态度将使德桑蒂斯成为更佳候选人
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/1797743/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1797858/)
 
-**郭文贵先生：**但是共产党非常清楚，七哥在一年前说过，中国的粮食将成为致命的问题。结果共产党在如此没钱的情况下，买掉了全世界一半以上的谷粮，中国人是不是就爱吃面嘛！——谷粮。谷粮要干啥？备战台湾。真正的去年和今年是真正的中国大粮荒，他不说大粮荒他说是丰收，丰收你还买什么粮食？这王八蛋是不是？这不瞪眼胡说八道吗？对不对呀？
+编译：Jenny Ball
 
-就像Isobel Yeung采访的时候（说）：我们是媒体、我们是中立媒体我们讲正义。你讲正义你咋不问问“乱伦彪”你说郭文贵乱伦他的侄媳妇儿有这事儿吗？你有证据吗？你在中国一个共产党政权的统治下你怎么当人权律师的是不是啊？你问“乱伦彪”一万多页的郭文贵乱伦的东西站得住脚吗？所以说这一模一样的道理，他所说的话正好是相反的。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image-1575.png)照片中，德桑蒂斯于 8 月 10 日在佛罗里达州瑟夫赛德发表讲话。 乔·雷德尔/盖蒂图片社
 
-然后看到了刚才你们的PPT讲了中国说我的经济有多强、经济多好、就业多好，你记住共产党当说这个的时候这个真的就危险了。
+被称为阴谋论网站的“信息战”（InfoWars）现在表明，共和党佛罗里达州州长罗恩·德桑蒂斯（Ron DeSantis），可能是比本周反复吹捧 COVID-19 疫苗的前总统川普（Donald Trump）更好的 2024 年总统候选人。
 
-它既要开展家天下一家之天下、习家之天下，唯一的声音、唯一的伟大、唯一的权力、唯一的平台、唯一的向全世界告诉你的所有事情和答案的地方，他怎么能这么说话呢？这些说话背后的动机是什么呢？所有这些经济指标大家看到，共产党已经把世界的经济彻底绑架了。
+川普上周日在德克萨斯州的一次活动中透露，他接种了第三剂 COVID-19 疫苗，这引起了支持者的嘘声。随后，他在接受“每日电讯”(Daily Wire) 主持人坎迪斯·欧文斯 (Candace Owens) 采访时多次吹捧这种疫苗，称其为“人类最伟大的成就之一”。
 
-从房地产和冬奥会和全世界市场，共产党即使玩儿假的擀面杖的经济，西方经济都跟着它一上一下，你说这到底有多可怕呀？
+在川普本周一再宣传疫苗后，这位前总统的一些保守派支持者表达了愤怒和沮丧。 InfoWars 创始人亚历克斯·琼斯 (Alex Jones) 向他的追随者发出“圣诞警告”，暗示这位前总统的名字将“作为纯粹的邪恶载入史册”。然后在周日，InfoWars 的主持人欧文·施罗耶（Owen Shroyer ）开始讨论那些反对 COVID 疫苗的人，可以在 2024 年支持的替代候选者。
 
-这嫖客来了有钱是不是？嫖客穿着衣服一进夜总会——“哎呀，我高潮了“！所有妓女说：”哎呀，哎呀.“.！就跟着叫是不是？这是因为啥？因为他是大嫖客呀，他高潮我也得高潮是不是？
+“我们正在考虑‘美国优先’、‘大觉醒’和川普运动的政治未来是什么，”施罗耶说。“是唐纳德·川普吗？或者这样的声明是否让我们不知所措，因为像是我们不想再支持他的味道？”
 
-字幕来源：[2021年12月24日 郭文贵先生直播 全文字版](https://gnews.org/zh-hans/1790583/)
+InfoWars 周日表示，在 2024 年的大选中，佛罗里达州州长罗恩·德桑蒂斯可能是比前总统川普更好的选择。
 
-编辑整理：喜马拉雅的肉夹馍；
+主持人继续推测2024年的总统选举。“那么，会是谁？这是最终的问题。好吧，罗恩·德桑蒂斯显然正在成为潜在的领跑者，并且，在许多民意调查中实际上领先于川普，”施罗耶声称。
 
-字幕文件制作：小满；
+尽管德桑蒂斯在共和党选民中的民意调查良好，但在大多数调查中，川普在 2024 年的潜在竞争者中占据主导地位。“梯队洞察”（Echelon Insights ）12 月的一项民意调查发现，30% 的共和党选民“可能”或“肯定”会投票给德桑蒂斯。与此同时，70% 的人表示会投川普。
 
-视频制作及上传：Cindy；
+9 月份的调查结果显示，两位著名共和党人之间的差距要小得多。由共和党民意调查专家卡特·雷恩（Carter Wrenn）代表川普前国家安全顾问约翰·博尔顿（John Bolton）的超级政治行动委员会进行的民意调查发现，川普得到了 26.2% 的共和党选民的支持，而德桑蒂斯以 25.2% 的支持率紧随其后。
 
-G-News发布：小满；
+尽管反对 COVID-19 疫苗的保守派最近几天表达了沮丧，但这位前总统长期以来一直吹捧“神速行动”的成功是其政府的最高成就。这位前总统于 2020 年发起了该倡议，以支持疫苗的快速开发，以结束大流行。
 
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；**
+上周二，乔·拜登总统赞扬了川普政府在“神速行动”行动中取得的成功。“让我说清楚。感谢上届政府和我们的科学界，美国是最早获得疫苗的国家之一，”拜登说。
 
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+在川普上周接受欧文斯的采访时，在她暗示疫苗不起作用后川普做出回击。
 
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+“哦，不，疫苗有效，但有些人没有注射它们，”他说。“病重去医院的都是不打疫苗的人。但这仍然是他们的选择，如果你打了疫苗，你就受到保护。你看，疫苗的结果非常好。如果你真的感染了，那只是一种非常轻微的形式。人们在接种疫苗时并不会死亡。”
 
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+在保守派强烈反对之后，川普周四在接受保守派电台主持人乔·帕格斯 (Joe Pags) 采访时，对疫苗的赞誉加倍。
 
-YouTube：[日本银河系农场](https://www.youtube.com/c/%25E9%2593%25B6%25E6%25B2%25B3%25E7%25B3%25BB%25E5%2586%259C%25E5%259C%25BA%25E6%2597%25A5%25E6%259C%25AC)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+“我们不能失去这个问题，”这位前总统告诉帕格斯。“这是我们所做的一件了不起的事。我们拯救了全世界数以千万计的人。”
 
-G-News：[喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+目前尚不清楚德桑蒂斯是否计划发起 2024 年的总统竞选活动。佛罗里达州州长在 10 月份表示，他将在 2022 年寻求连任。“除了完成我的工作，我不考虑任何事情，”他当时告诉福克斯新闻。“我们在佛罗里达有很多事情要做。”
 
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+川普在 10 月份告诉雅虎财经，如果佛罗里达州州长在 2024 年共和党初选中与他竞争，他将“击败”德桑蒂斯。“如果我面对他，我会像击败其他人一样击败他，”他说。值得注意的是，这位前总统尚未确认他是否会参加下一届总统选举。
 
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+佛罗里达州州长已接种了 COVID-19 疫苗。今年 4 月，美联社报道称，他接种了强生公司针对新型冠状病毒的单剂疫苗。本月早些时候，德桑蒂斯向福克斯新闻表示，他没有接种加强剂。
 
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
+德桑蒂斯说：“我已经做了我所做的一切，正常的注射，而归根结底是，**人们对他们想做的事情的个人决定**。” 州长鼓励佛罗里达人接种疫苗，但强烈反对注射疫苗的强制授权。
 
+《新闻周刊》联系了川普的新闻办公室征求意见，但没有立即得到回应。
+
+**点评：川普或许应该思考为什么拜登反对他的几乎所有主张，唯独100%在疫苗上夸赞他？正如中国共产党夸的东西，一定要反着看。**
+
+新闻来源 **：**[newsweek.com] [InfoWars Suggests DeSantis Better Candidate Than Trump After Ex-President’s Vaccine Remarks](https://www.newsweek.com/infowars-suggests-desantis-better-candidate-trump-after-ex-presidents-vaccine-remarks-1663210?utm_source=PushnamiMailing&amp;utm_medium=email&amp;utm_campaign=automatic&amp;UTM=1640611565067&amp;subscriberId=6180566715c6fcdd524c7c95)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/GNEWS_CH.-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
