--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,39 +1,49 @@
 ---
-title: 视频&#124; 西方联合采用“温水煮青蛙”方式消灭中共
+title: 7·24系列——迪士尼陷落于“中国梦”
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1797720/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1797784/)
 
-## 摘自2021.12.27郭先生盖特
+**编辑 Benj1 翼族**
+**编辑 MSGZ**
+![](https://assets.gnews.org/wp-content/uploads/2021/12/11-12.jpg)图片来源  澳洲新闻网
+**郭文贵先生在2021.12.24的直播中提到：**
 
-制作：香草山香港部
+你看VOICE和HBO的股东有几个不是黑暗势力的？所有股东加在一起的财富。顶好几十个落后国家的财富总额。VOICE和HBO的股东加在一起所形成的力量，可以改变人类的经济和政治的命运，可以决定美国谁是总统，一点不夸张。Disney(迪士尼)、Blackstone （黑石）、TPG、索罗斯、 Erin，如果这些人要改变不了美国，它绝对可以觉得任何人都可以当总统，让小新当美国总统都可以。以这样的事例来黑掉爆料革命，你觉得爆料革命还重不重要？
 
+华特迪士尼公司（英语：The Walt Disney Company）通称“迪士尼公司”或“迪士尼（Disney）”，是美国一家多元化跨国媒体集团**，现今的营范围涵盖了戏剧、广播、音乐、出版及网络媒体。旗下业务囊括了主题乐园、体验和消费品部门、**媒体和娱乐发行部门，以及影业、大众娱乐、体育三大内容板块。其旗下电影公司的作品知名于世，华特迪士尼影业集团是美国当今规模最大、最著名的电影制片公司之一。华特迪士尼公司拥有并运营着美国主流电视网之一的美国广播公司，还拥有着迪士尼频道、娱乐与体育节目电视网、艺术与娱乐电视网、Freeform、FX和国家地理等有线电视网，并在全球拥有其授权的14家主题公园。
 
+在中国，迪士尼采取了线上+线下相结合的销售模式，因此铺陈了广泛的业务。迪士尼在上海陆家嘴和太古汇都设有迪士尼商店的实体店，在阿里巴巴、京东等电商平台也开设网店，截至2019年底已实现了线上25%，线下75%的销售占比。据统计，截至2019年底，迪士尼在大中华区已经拥有600多家授权合作伙伴，其中90%是来自本土的合作伙伴。
 
-国内的各地区春节前金融、房地产、失业，还有这些明星被抓，这个被查，那个公司被封的，多了去的，这个时候，美国内部做出决定，要给共产党一些好处，要让共产党麻痹，你看美国又跟你和好了，恢复到10年以前的关系了吧，别对美国干什么坏事儿了，甚至病毒不朔源，税取消，美中两个元首甚至要安排见面，甚至支持在亚太的永久和平，甚至美国说，你加入我都很可能加入。
+**基于中国的市场资源均掌握在中共盗国贼手中，任何海外资本，包括迪士尼想在中国开展广阔的业务，势必要和中共盗国贼建立亲密的关系。**
+![](https://assets.gnews.org/wp-content/uploads/2021/12/22-13.jpg)
+2011年4月，在上海度假区的奠基仪式上，**艾格和迪士尼前首席运营官托马斯·O·斯塔格斯(Thomas O. Staggs)摆拍了一张照片，两人拿着铁锹站在上海市最有权势的两位领导人——韩正和俞正声身旁。**
 
-现在要哄共产党，要让共产党内部经济的崩塌和堕落，特别是美国要利用中共内部的习、曾、江、王、孟、杨洁篪的这些内部的复杂政治斗争和矛盾，包括充分的利用中国社会的四分五裂，这种社会矛盾，以及50几个民族之间的矛盾。大家往回看，美国在当时干苏联的时候，那干得太聪明了，就是温水煮青蛙，经常的说还给你熄熄火，现在就到熄火的时候了，包括对中共的一些技术上的开放，都在考虑范围内。
+2016年5月5日下午，**习近平在人民大会堂会见美国华特迪士尼公司董事长兼首席执行官罗伯特·艾格。这家全球知名娱乐公司的负责人还有另一个重要头衔——美中贸易全国委员会副主席。**
 
-这种情况下会出现什么兄弟姐妹吗？叫做虚假繁荣、回光返照，现在欧洲认为，让共产党和俄罗斯继续在某些方面犯战略性的错误，符合欧洲的利益，这就是新三国呀，是不是？现在严格讲就是四国演义。美、欧、俄、中，这种情况下兄弟姐妹们，什么最重要？经济最重要，媒体最重要，还有一个搂着住最重要，自己不要犯战略错误。新中国联邦在这个历史时代，才能真正地显示出我们要搂得住，我们要做四国春秋末期，四国开始的，我们要做司马懿。
+跟上海市政府合作的美国商人罗伯特·劳伦斯·库恩(Robert Lawrence Kuhn)说，“中国想让上海成为这种龙头城市，一座展示给全世界的样本城市，” “迪士尼是这个宏大战略的一部分。
 
-所以兄弟姐妹们，干什么？加速强大我们的经济，加大强大我们整个的媒体平台，让更多的战友加入，强大新中国联邦的抗压能力、抗风险能力、抗突发事件的能力，强大灭共在国际上的舆论，强大灭共的正义性，强大灭共的必要性，让西方世界看到和我们站在一起，然后让西方看到我们是无私、无利，没有任何政治图谋，而且完全尊重西方的宗教、信仰、文化、法治系统，最后达到以美灭共、以共灭共、以钱灭共、以黄灭共，无苗族，没有任何经济、政治、压力族，美好的世界就属于我们。
+上海市政府通过建设工业园区、经济特区和旅游景点来重建浦东，在这一过程中，与迪士尼的合作被视为是重要的部分。与上海市政府合作的关系使迪士尼处于中共盗国贼控制企业的复杂网络之中。
 
+其中，迪士尼与上海国有企业上海申迪（集团）有限公司（Shendi Group）建立了业务关系。申迪集团以出资57%的占比成为上海迪士尼乐园的大股东，迪士尼公司的股权占比是43%，双方按股权比例分享利润，分担风险。
 
+申迪的四大股东分别是上海广播电影电视发展有限公司、锦江国际集团、百联集团和房地产开发商陆家嘴集团，均为极具影响力的国企。它们分别都和迪士尼的新度假区有着业务上的联系。
 
-发稿：雪梨
+锦江国际集团持有为主题公园提供旅游服务的合同。陆家嘴集团参与开办了那家全球最大的迪士尼商店(Disney Store)。上海文广集团将把主题公园的相当一部分电视广告及推广预算收入囊中，因为它控制着上海市最大的一些电视台，以及主要报纸、杂志和广播电台。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/M12.jpg)
+上海陆家嘴（集团）有限公司是上海市人民政府批准组建并重点扶持的五十四家大型企业集团之一，主要负责全国唯一以“金融贸易”命名的国家级开发区陆家嘴金融贸易区的土地成片开发和综合经营。
 
-**更多资讯，更多关注**
+百联集团是由原上海市第一百货集团、华联集团、友谊集团、物资集团合并重组的大型国有商贸流通产业集团，挂牌成立于2003年4月。注册资本为10亿元，资产总额达300亿元。
 
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+迪士尼还与阿里巴巴旗下的中国优酷视频流平台存在业务关系。
 
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+**发布：**去中心化Math
 
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
