--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,20 +1,18 @@
 ---
-title: 伊莎贝拉事件影响力大于当年印尼排华的起因报道
+title: 中共已经不能用骗子来形容了
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797953/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1798018/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
-12月22日，郭文贵先生在GTV大直播指出：
+12月17日，郭文贵先生在GTV大直播指出：
 
-伊莎贝拉是在帮中共制造海外华人的最大危机，小骂大帮忙，最终把新中国联邦定性为“暴力分子”。当年印尼排华就是从媒体制造危机开始，导致无数华人惨死。作为媒体报道，她只字不提中共对西方的渗透和威胁，却把中美交恶全都转嫁给新中国联邦人，让我们成为牺牲品。
+一个宣扬无神论的政党，结果自己的官员全都搞迷信。一个号称无产阶级的政党，结果一抓贪官就是贪几十亿。一个标榜政治清廉，洁身自好的政党，结果私生子遍布全球。生老病死都为它输入利益，政法委成了最大的黑社会。中共的这种假与丑，已经不是一个“骗”字所能概括。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
