--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,23 +1,30 @@
 ---
-title: 停止接种新冠疫苗的几点理由
+title: 应对中俄地缘政治威胁 拜登签署7700亿美元国防授权法案
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/1797590/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1797653/)
 
-字幕翻译：Jenny
-字幕听写/添加：一灯一智
-**一，高接种率的英国在Omicron变异病毒面前溃不成军，再次佐证疫苗赶不上病毒变异的脚步**。英国首相鲍里斯·约翰逊自己都很清楚：“新冠疫苗即不能保护你不染上这种疾病，也不能保护你不把它传给别人”。
+撰稿—八木
+校对/上传—无明逆流
 
-据英国政府12月24日公布的疫情数据显示，新增确诊病例超过12万例，是疫情暴发以来的日感染最高纪录，伦敦是英国疫情最严重的地区。截至12月19日大约每20个人中有1人确诊感染病毒。而英国12岁以上人群已接种两剂新冠疫苗比例高达82%，并且有超过56%已接种过加强针。
+据路透社报道，拜登于白宫当地时间27日签署了价值7700亿美元的2022财年国防授权法案，法案较之前拜登提交的国防开支计划多出250亿美元。此前该法案已在美国国会参众两院通过。
 
-**二，美国著名的[彼得·麦卡洛博士](https://gnews.org/zh-hans/1766276/)医生告诉我们这是一场由“权威人士的渎职引发的灾难”**。他在视频中说：有超过4000名美国人死亡，欧洲有超过10，000人死亡，他们是在接种疫苗后的第二或第三天死亡的。载入历史陈述将是“权威人士的渎职错误行为导致这些死亡”。他还说据他所知澳大利亚每人计划有14针新冠疫苗，也就是7年内每6个月一针。
+![](https://assets.gnews.org/wp-content/uploads/2021/12/WhatsApp88.44.29-PM.jpeg)图片取源网络
 
-澳大利亚新南卫视州首席卫生官凯丽·钱特医生（Kerry Chant)更是不加掩饰地公开讲：“在未来，我们需要习惯于接种COVID疫苗，加强剂针、重复针剂都将是其中的一部分。我们可以向你们保证，澳大利亚联邦政府已经为2022年购买了大量的疫苗，疫苗会有一个定期接种周期，重新接种疫苗周期取决于我们对免疫力挥发的时间有了更多的了解。**这些所谓的权威人士不知道病毒变异的速度和方向却能准确地为民众预定未来几年的疫苗，他们的科学依据究竟是什么？**
+报道称，拜登在签署该法案后发表声明，“法案为军人及其家属提供了至关重要的福利，增加了诉诸司法的机会，还包括支持我们国家国防建设的关键机构。”
 
-**三，关闭疫苗项目的极限是大约25到50人死亡。**1976年的猪流感，25人死亡，他们关闭了疫苗项目，对于流感，当他们发现有53人因接种疫苗而死亡时，他们就质疑疫苗。视频中的权威人士说：“我们可以证明这种新冠疫苗在72小时内有45000人死亡”。
+本月，《2022财政年度国防授权法案》正式在参众两院获得通过，这份法案批准了7700亿美元的军费开支，包括提高美国军人工资，授权实施一系列国防项目以及应对全球“地缘政治威胁”等战略。
+法案计划为美国国防项目提供总计7680亿美元的资金，拨付国防部7400亿美元，其中研发经费投入1120亿美元，用于研发测试各种颠覆性技术与先进武器装备。比如，微电子技术、人工智能技术、军用5G技术、高超音速武器、海军即时打击武器、空军先进快速反应武器等。
 
-推荐文章：[彼得·麦卡洛博士谈羟氯喹作为治疗新冠的有效药物被打压的事实](https://gnews.org/zh-hans/1766276/)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/澳喜图标2-1-3.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/WhatsA3.40-PM.jpeg)图片取源网络
 
+**中俄地缘政治威胁极速加剧，美国防军费连年上涨。**
+
+尽管美国已经从阿富汗和中东撤军，但新财年国防军费总额相较2021年的7400亿美元仍有所上涨。
+在应对中共方面，新财年国防法案中包含大量涉及台湾的内容，包括建议美国国防部邀请台湾参与“2022年环太平洋军演”，协助台湾制定非对称(军事)防御能力计划。法案要求美防长在明年2月15日之前提交一份加强美国国民警卫队与台湾合作的可能性及合理性报告，还要求美国国家情报总监提交“大陆破坏台海和平稳定”的行动报告，并列出美国为应对此类问题作出的行动。
+
+在涉及乌克兰方面，法案还将向乌克兰武装部队拨款援助3亿美元，以应对俄罗斯对乌克兰的入侵。
+
+相关新闻：[美国总统拜登签署7,700亿美元国防授权法案 军费开支较上年增加约5%](https://www.reuters.com/article/us-biden-ndaa-defence-budget-1228-idCNKBS2J702E)
 
  
 
