--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,18 +1,18 @@
 ---
-title: 七哥从采访开始就知道 VOICE就是共产党派来的 要把七哥打成骗子暴力分子
+title: 冬奥会各国各语区都分配妥当 感人故事脚本已准备好
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797946/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1798010/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
-12月22日，郭文贵先生在GTV大直播指出：
+12月19日，郭文贵先生在GTV大直播指出：
 
-郭先生从一开始就知道，这是中共精心安排的。伊莎贝拉本身就有中共背景，17年采访就污蔑爆料革命的话不可信，这次又造谣爆料革命新中国联邦是邪教、暴力分子，骗财。她的两次采访都是经过中共精心的布局，连播放的时机也都是战友们要做重大直播的前夕，这些都绝非偶然。
+中共针对参加冬奥会的国家，按照各国人员的特点、语言环境、男女比例，已经制定了详细缜密的计划。何时得病毒？如何医治？怎么树立党的光辉形象？这些感人剧本早已经安排妥当，中共的邪恶远超大家想象。
 
 *编辑：东京樱花团/墨然
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/%E6%9C%80%E6%96%B0%E7%89%88%E6%A8%B1%E8%8A%B1%E7%BD%91%E5%9D%80.jpg)
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
