--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,14 +1,14 @@
 ---
-title: Isobel对小斯基和Nicole埋伏设计 用心之险恶
+title: Isobel的采访是出自习近平王沪宁和中国警察之手 邪恶至极
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797931/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797984/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
 12月22日，郭文贵先生在GTV大直播指出：
 
-中共这次策划采访设计之深，险恶之极。三个重点：一是明确冬奥会之前放出来；二是把新中国联邦定义为邪教，从而达到遣返和驱离目的；三是造假制造恐怖事件，丑化战友。最后让所谓的战友出来，让自己人骂你。这是典型的中共手法，他们对新中国联邦的污蔑一条也不会成立。
+伊莎贝拉这个纪录片，一贯是中共的手法。准备很细致，绝非偶然事件。他们打着采访郭先生的旗号，却花费大半年采访周边人，只让郭先生露个脸。再通过后期剪辑，颠倒黑白，丑化战友，对新中国联邦人伤害很大。让不明真相的人看到，真的会被混淆是非。标榜西方民主自由记者，善用假新闻拼凑，这女人险恶之极。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
