--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,18 +1,20 @@
 ---
-title: Omicron病毒绝对超出大家的想象
+title: 大兴是重点清城地点
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797915/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1797965/)
 
 文编：东京樱花团/樱花传媒
 视频:东京樱花团/中文小视频组
 
-12月22日，郭文贵先生在GTV大直播指出：
+12月19日，郭文贵先生在GTV大直播指出：
 
-郭先生基于情报，今年曾多次告诉世界，10月-12月来自非洲和美洲西部的新病毒会扩散开来。Omicron 就是中共为了在冬奥会前打垮西方经济、搞乱西方，打赢中美的世纪大战而释放的。Omicron 的危险性、造成的各种综合症远超我们的想象，糟糕的是伊维菌素和青蒿素对它并不能100%有效地预防和治疗。
+北京会像08年奥运会一样清城，各国官员会从大兴机场降落，周边已经布置40万重兵。北京到张家口，沿途一切不符合中共要求的全部清空，就跟朝鲜一样。习怕到什么程度？北京市核心地区全部布置红旗反导弹系统，习怕的是内乱和斩首。
 
 *编辑：东京樱花团/墨然
 发布：东京樱花团/tdownc2p*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
