--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,39 +1,28 @@
 ---
-title: MILES GUO歌声 CASSANDRA预言
+title: 音乐洗脑需警醒，重建 随心颂天唱新声，归去
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1813223/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1813295/)
 
-作者：香草山福音部-能登山神
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/IMG_0284.jpg)
+新西兰伊甸农场Gnews组 财经G乐部 亚伦
 
-如果艺术家诅咒某种东西它必然灭亡，Cassandra意思是说，如果不相信他的预言，人就是在自取灭亡。 艺术是人对自我的叙事。是为提供人对生活的感知方式服务的。是容纳对生活的理解与想象的对象。
+12月31日和1月1日元旦，郭文贵先生于两日的GTV、Gettr直播中深入解读音乐的重要作用，并指出音乐的本质是自然，但是被独裁专制群体利用成统治人民的精神核武器。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/J2JxGgrIvjuiRt0CJUbw.jpg)图片来源运营号
 
-人本主义的艺术价值观认为，如果一定要言说艺术的目的，那就是也只能是人。是人的意志与信念。从某种意义上说，艺术中其实只有两种艺术，一种是人性的善良艺术，另一种是反人性的邪恶艺术。 
 
-摇滚歌王郭文贵先生的歌之所以被全球传播，是因为很好的表达某种心情或某种境况之下所易于相信的东西。单纯的快乐或者忧伤并不是艺术思考的指向。只有对“普遍事物的沉浸”才有可能产生艺术的表达。艺术的价值诞生并再生于精神深处。
+音乐英文“Music”一词源于古希腊缪斯“Muses”，缪斯是希腊神话主司艺术与科学的九位古老文艺女神的总称。
 
-如果CCP不停的在全世界投放病毒，人类的不幸随时降临，而我们的幸福却需要对现实的无视才能获得。这种幸福一定就会需要一种能够轻视甚至蔑视“感官生活”的能力。从这意义上说，那些被洗成脑残的粉红热衷于在“普遍世界”中寻求“另一种”幸福的人，在现实意义上往往是不幸的。
+音乐原本是个人的内心世界、信仰，和上天赋予能量的表达，以及歌颂上天、大地美好的愉悦流露。但是在政治家眼中，音乐却是人与人之间最重要的沟通方式，是影响人一生最长远的、最潜移默化的精神核武器。
 
- 时间是主观的。即便这个到来的新年。它存在于不幸者、期望者或回忆者的精神之中。没有所谓过去，现在与未来。过去与回忆相连，未来与期望相关。而回忆与期望都是“现在的事实”。存在的只有现实。只有过去的现在，现在的现在以及未来的现在。人类面临的现在就是病毒后灾难，我们没有选择，必须站出来面对现在反击邪恶。 
+比如，娶了情人女儿的德国音乐鬼才瓦格纳是世界近代史中最有天赋的音乐家，很早就认识到音乐的魔力，并要求所有的歌剧一定从孩子唱起。他提出如果想赢得战争，就一定要人民穿统一的服装、跳统一的舞蹈、唱统一的歌曲（希特勒统一军服、建筑、艺术的思想来源）。瓦格纳也曾说，虽然我会成功，但是我死后一定下地狱，因为我用音乐“屠杀”了太多无辜的人。最后，瓦格纳反犹太人、反民主自由的思想和富有争议的音乐也间接影响了暴君希特勒，导致希特勒把音乐作为自己的第三力量，强制德国全军听瓦格纳的歌剧。苏联斯大林也是运用音乐蛊惑人心的高手，通过《喀秋莎》、《莫斯科郊外的晚上》、《山楂树》等魔鬼般的歌曲让亿万苏联人甘愿奉献了生命。
 
-因为冬天的萧瑟，所以憧憬春暖花开。因为未来已来，所以不愿放弃。
+善于把握政治与音乐的关系，师从于苏联的中共当然不会例外。从五四运动到中共建国的1949年，中共聪明地垄断了音乐，盛产红歌3920首。但是由于创作能力有限大多只得抄袭，中共国歌是抄的（萧友梅是义勇军曲子的创作者）。来自沂蒙山区的《跟着共产党走》（又名《你是灯塔》）也是抄的，这个歌是抄袭苏联的追悼歌《光荣的牺牲》，所以一度销声匿迹长达29年。
 
-回忆与预言都是对理想的呼吁与想象。它根植于我们不愿放弃的价值与信念，即新中国联邦之正道主义唯真不破及善良真诚勇敢之精神！
+所谓流行音乐，是以个体为单位的音乐。没有流行歌曲的地方就只剩神歌和红歌，只有神歌的地方就会有神棍，只有红歌的地方就会有独裁的流氓。所以，对于音乐、建筑、艺术的表达，只要不是发自内心的都只是复制，失去力量。看来，重建音乐回归本质，势在必行。
 
- 这是Miles guo的呐喊！ 这是Akdia的笛声！ 这是Cassandra的预言！ 这是爆料革命战友们唤醒善良人的使命！ 这是新中国联邦人拯救人类走向正道主义的希望之光！
+\*“查理和他的乐团”，作为德国纳粹宣传机器的一部分，这支“御用”乐团是欧洲摇滚乐的鼻祖。这些人都没有在二战后被审判，而是隐藏在好莱坞背后成为大制片人，得以善终。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/%E4%B8%80%E6%9C%88%E5%B0%8F%E5%9B%BE-1.jpg)
 
-编辑/校正/发稿：Daxia
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/7c050d08-aa3d-47c7-858a-01a7ef4f93ff.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
