--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,43 +1,75 @@
 ---
-title: 1/1/2022国际财经快讯：世界主权财富和公共养老基金资产创纪录；华尔街接近纪录高点
+title: 西喜时事新闻简报 — 中共病毒时事篇
 ---
-`秘密翻译组金融团队` [轉載自GNews](https://gnews.org/zh-hans/1813195/)
+`wenwu` [轉載自GNews](https://gnews.org/zh-hans/1813226/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-6.png)[图片来源](https://www.reuters.com)
-**1.世界主权财富和公共养老基金资产达到创纪录的31.9万亿美元**
+**编译：西班牙巴塞罗那喜悦农场-wenwu**
 
-[伦敦，1月1日（路透社）–周六发布的一份年度报告显示，由于美国股票和石油价格上涨，世界主权财富和公共养老基金持有的资产在2021年上升到创纪录的31.9万亿美元，投资也上升到几年来的最高点。行业专家Global SWF关于国有投资工具的报告发现，主权财富基金管理的资产在过去一年中增长了6%，达到10.5万亿美元，而公共养老基金的资产增长了9%，达到21.4万亿美元。该报告还发现，国有投资者部署的资金，无论是交易数量还是数量，都比前六年的任何一年都要多。约有2156亿美元被使用，其中几乎一半是由主权财富基金支付的。](https://www.reuters.com/markets/europe/swf-public-pension-fund-assets-hit-record-319-trillion-report-2022-01-01/)
+您若想了解全文报导内容，请点击标题链接
 
-**2.****华尔街结束动荡的一年，接近纪录高点**
+（我们不反疫苗，只针对假疫苗，我们不反科学，只针对反人类）
 
-[纽约，12月31日（路透社）–周五，华尔街在2021年最后一个交易日的清淡交易中收盘，接近纪录高点，标志着从全球大流行中复苏的第二年。美国三大股指都取得了月度、季度和年度涨幅，创下了1999年以来最大的三年涨幅。标准普尔500指数自2020年最后一个交易日以来上涨了27%。截至周四，该基准指数已登记了70个创纪录的收盘价，或为有史以来的第二多。使用Refinitiv的数据可以追溯到1928年，标普500指数在一年中创下的最高收盘纪录是1995年的77次。道琼斯指数今年上涨了18.73%，纳斯达克指数上涨了21.4%。](https://www.reuters.com/markets/us/wall-street-ends-tumultuous-year-near-record-highs-2021-12-31/)
+1. [西安封城不到10天 以物换物了 打回石器时代 共匪真TM厉害！](https://www.aboluowang.com/2021/1231/1689965.html)
 
-**3.****市场关注****COVID-19****的下一步行动，****LNG****和煤炭引领****2021****年商品反弹**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip27.png)
 
-[新加坡（路透社）–2021年，从能源和金属到农产品的大宗商品价格大幅反弹，电力燃料领涨，原因是COVID-19疫苗接种避免了大范围的封锁，供应紧张，经济复苏强劲。分析师和交易员说，随着世界经济继续复苏，预计2022年全球商品需求将保持强劲，并支撑价格，尽管类似的价格跳跃不太可能。经纪公司OANDA的高级分析师Jeffrey Halley说：”2021年的特点是一个巨大的广泛的反弹，”他说。”尽管我相信商品价格将保持强劲，但我认为2020年的反弹和2021年的反弹将是特殊的年份，因此我预计未来一年不会有同样水平的涨幅。”今年能源和食品价格扶摇直上，从北京到布鲁塞尔的公用事业和消费者受到冲击，提高了通胀压力。](https://www.oann.com/lng-coal-lead-2021-commodities-rally-as-markets-eye-covid-19-for-next-move/)
+据《阿波罗新闻》2021年12月31日电，西安暴力封城第9天，西安几近“蛋尽粮绝”，居民纷纷呐喊：快饿死了！无奈之下已经开始以物换物了（问题是，你有物吗？），一朝倒退至石器时代。
 
-**4.****2021****年韩国出口同比增长****25.8%****，为****11****年来最大幅度**
+网友“maco”发推文：“西安，人民币已经局部失效了！当一个区域，物资供应出问题的时候，钱作为一般等价物就不被认可，人们就开始相信真实的东西，以物易物，各取所需！如果这个区域扩大到全国，或者大范围封城、物资短缺、战争……都可能引发货币危机，人们自然而然就会对法币失去信任，那么崩盘就有可能随时发生。”
 
-[首尔（路透社）–2021年，韩国的出口以11年来的最快速度增长，在全球需求大流行后的复苏的支持下，出口总值达到了历史最高水平。贸易部周六的数据显示，全年出口额较上年同期增长25.8%，达到6,445.4亿美元，是2010年以来的最快速度。这也标志着在2020年和2019年分别收缩5.5%和10.4%之后，三年来的首次增长。”现在是迈向7000亿美元出口时代的时候了……贸易部将加大政策力度，使工业和出口能够在今年拖出完整的（经济）正常化，”Moon Sung-wook部长说。按项目分类显示，半导体的出口同比增长29%，达到创纪录的1280亿美元，而石油化工产品的出口也猛增54.8%，达到创纪录的551亿美元。其他项目，如汽车和钢铁，分别跃升24.2%和37%。](https://www.oann.com/s-korea-exports-expand-25-8-y-y-in-2021-sharpest-in-11-years/)
+元旦的西安仍然在挨饿中，西安的现状[点击](https://www.aboluowang.com/2022/0101/1690298.html)可查看图片合辑，并分享了西安居民想说的种种…另外，（[视频](https://youtu.be/fqlJYoxeBrY)疑似由附近楼上的居民拍摄）陕西省西安市雁塔区丈八街道南窑头西区，一位饿着肚子的小伙出去买馒头被四、五个黑衣防疫人员（一名黑衣男子从侧门绕到当事人身后，一把夺下当事人的手机）拳打脚踢。微博博主@关注三秦称已联系到被打者，当事人表示自己并没有受伤，表示谅解；打人者已在警方的要求下道歉。
 
-**5.****德国关闭最后六座核电站中的三座**
+2. [继”Delmicron”之后，是 “flurona”：以色列首次报告中共病毒和流感的双重感染](https://www.wionews.com/world/after-delmicron-its-flurona-israel-reports-first-double-infection-of-covid-and-flu-441504)
 
-[柏林，1月1日（路透社）–德国已经关闭了其最后六座核电站中的三座，因为它正朝着完成退出核电的方向发展，将重点转向可再生能源。2011年日本福岛反应堆熔毁，地震和海啸摧毁了沿海电厂，这是自1986年切尔诺贝利事件以来世界上最严重的核灾难，政府决定加速淘汰核电。由E.ON（EONGn.DE）和RWE（RWEG.DE）运营的Brokdorf、Grohnde和Gundremmingen C的反应堆在运行三十五年后于周五晚些时候关闭。最后三座核电站–Isar 2、Emsland和Neckarwestheim II–将于2022年底关闭。经营Brokdorf和Grohnde电厂的Preussen Elektra周六在一份声明中说，这两座电厂在周五午夜前不久被关闭。RWE表示，Gundremmingen C厂也在周五晚上停止了发电。](https://www.reuters.com/markets/commodities/germany-shuts-three-its-last-six-nuclear-plants-2022-01-01/)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip28.png)
 
-**6.美国官员因航空安全问题要求AT&T和Verizon推迟5G无线通信**
+据《Wionews》2021年12月31日电，当世界正在努力应对 Delta 和 Omicron 变体，以及被称为“Delmicron”变体的中共病毒（冠状病毒，Covid19）的组合时，以色列报告了其第一例（弗洛纳）“flurona”–冠状病毒和流感的同时感染（的危害尚不清楚）。
 
-[华盛顿，12月31日（路透社）–美国交通部长Pete Buttigieg和联邦航空管理局（FAA）局长周五要求AT&T（T.N）和Verizon Communications（VZ.N）推迟计划于1月5日推出的新5G无线服务，以应对航空安全问题。在路透社周五看到的一封信中，Buttigieg和FAA局长Steve Dickson要求AT&T首席执行官John Stankey和Verizon首席执行官Hans Vestberg推迟不超过两周的时间，作为 “作为推进5G在C波段部署和安全飞行操作共存的近期解决方案的建议”。航空业和联邦航空局已经提出了对5G与敏感的飞机电子设备（如无线电高度计）的潜在干扰的担忧，这可能会扰乱飞行。](https://www.reuters.com/business/aerospace-defense/us-officials-ask-att-verizon-delay-5g-wireless-over-aviation-safety-concerns-2021-12-31/)
+据 Ynet 新闻门户网站周四报道，第一例”弗洛纳”病毒是在，一名最近在以色列中部的佩塔蒂克瓦市（Petah Tikva city）一家医院分娩的妇女(未接种疫苗)身上发现的；这名妇女出现了相对温和的疾病症状，并将很快出院；截至本周二，以色列已发现1741例 Omicron 病例，其中1004名携带者是属于境外输入。
 
-**7.****德国希望****G7****财长们关注经济复苏和气候保护**
+与此同时，以色列宣布该国正处于“第五波”，该国记录了更多由于Omicron变体导致的病例（以色列总理纳夫塔利·贝内特「Naftali Bennett」授权为免疫系统较弱的人打第四针疫苗作为强化针）；卫生当局报告了超过4000个新病例，这是自9月以来的最高纪录；在940万以色列人中，已有420万人接受了强化针。
 
-[柏林，1月1日（路透社）–德国财政部长克里斯蒂安-林德纳周六表示，德国希望利用其作为七国集团（G7）主席国的身份，支持经济从COVID-19大流行病中恢复，并加强努力，改善气候保护。林德纳在一条推特上说：”德国已经接任2022年七国集团主席国–七国集团国家代表着自由、民主和进步。”他补充说：“考虑到这一点，我们必须克服大流行病并推动全球经济复苏。”林德纳是自由民主党（FDP）的党魁，也是总理奥拉夫-肖尔茨的三方执政联盟中的小伙伴，他说他希望在七国集团会议期间将数字化和气候中立问题放在财长和央行行长议程的首位。](https://www.reuters.com/markets/commodities/germany-wants-g7-finance-ministers-focus-recovery-climate-protection-2022-01-01/)
+3. [研究表明，Omicron 可能更温和，因为它攻击肺细胞的方式不太有效](https://www.businessinsider.com/studies-omicron-less-severe-attacks-lung-cells-TMPRSS2-Gupta-COVID-2021-12)
 
-**8.****土耳其提高能源价格；伊斯坦布尔月度通胀率为十年来最高**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip29.png)
 
-[伊斯坦布尔，1月1日（路透社）–周六的数据显示，上个月土耳其最大城市伊斯坦布尔的通货膨胀率飙升至至少十年来的最高水平，总统塔伊普-埃尔多安的政府大幅提高了新一年的全国电力和天然气价格。汽油、汽车保险和一些桥梁通行费的价格也出现了跳涨，给面临通货膨胀激增和由一系列非正统降息引发的货币危机的经济增加了压力。能源市场监管局以全球能源通胀高企为由，表示2022年高需求的商业用户电价上调高达125%，低需求的家庭电价上调约50%。](https://www.reuters.com/markets/europe/turkey-hikes-energy-prices-istanbul-monthly-inflation-highest-decade-2022-01-01/)
+据《商业内幕》2021年12月31日电，根据最近发表的两项实验室研究（一组来自不同大学的31位科学家合作进行了第一项研究的项目；第二项研究是由来自苏格兰和英国研究所的34位科学家撰写的），Omicron冠状病毒变种在人类中可能不那么严重，因为它以不同的方式攻击人类肺部细胞（这两项研究都以预印本的形式发表，这意味着它们还没有被其他科学家审查）。
 
-By【秘密翻译组-金融组】
-作者：千年等一回
+研究人员说，Omicron的众多突变似乎已经完全改变了它在体内的自我复制方式（或Omicron直接来自于实验室）；剑桥大学领先的变异研究者、第一项研究的作者Ravindra Gupta（古普塔）告诉Insider，Omicron 的生物学特性与covid19 不一样。这几乎是一个“新事物”（新的证据，支持Omicron不那么危险）。
+
+两种方法影响细胞：一种方法是依靠病毒的外壳与人体细胞的膜融合，这种途径被称为”细胞表面融合”，是Delta更喜欢的感染肺部（高水平TMPRSS2的分子）途径；Omicron更适合使用一种叫做内体融合的途径感染肺部（低水平TMPRSS2的分子）人体细胞，这将使它更有能力造成症状轻微的感染。
+
+细胞表面融合只有在细胞携带高水平的称为TMPRSS2的分子时才能使用，在冠状病毒的情况下，TMPRSS2将病毒的刺突蛋白剪成两半。TMPRSS2大量存在于肺部，这意味着像Delta这样的变种可以在那里茁壮成长（Delta的突变意味着它比其他变体更善于让其刺突蛋白被剪断），对其感染的人造成严重损害。
+
+Omicron的刺突蛋白在与人类细胞的结合方面要好得多，这使它在没有TMPRSS2的细胞中具有优势，该研究说：气道细胞的TMPRSS2水平较低，因此Omicron更适合使用一种叫做内体融合的途径感染人体细胞，这将使它更有能力造成症状轻微的感染。
+
+4. [Cruz指责Fauci在COVID-19上玩政治游戏](https://www.foxnews.com/politics/cruz-accuses-fauci-of-playing-politics-with-covid-19-after-recent-comment-about-hospitalized-children)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip30.png)
+
+据《福克斯》2021年12月31日电，特德·克鲁兹（Ted Cruz）参议员在[推特](https://twitter.com/tedcruz/status/1476734214875885591?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1476734214875885591%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https://www.foxnews.com/politics/cruz-accuses-fauci-of-playing-politics-with-covid-19-after-recent-comment-about-hospitalized-children)上转发了Fauci在MSNBC的一次采访，他在采访中谈到了令人不安的感染病毒的住院儿童人数。Fauci明确表示，中共病毒患者的住院儿童人数与“感染中共病毒（儿童人数）”之间是有区别的：“而我们的意思是这样的。如果一个孩子进了医院，他们会自动接受COVID检测，并被算作COVID住院病人，而事实上，他们可能是因腿部骨折或阑尾炎或类似疾病而住院。所以它过度计算了因COVID19而住院的儿童的数量，而不是因为COVID19而住院。”
+
+Fauci的评论是在美国儿童“因COVID19住院”的记录激增之后发表的。在12月22日至28日的一周内，平均每天有378名（17岁及以下）儿童因中共病毒入院，比前一周增加了66%。美联社报道说，儿童仍然占COVID-19引起的病例的一小部分。
+
+“（控制疫情）没有联邦解决方案，这在州一级政府得到了解决…”拜登说；拜登作为2020年的总统候选人，承诺“关闭病毒，而不是关闭国家”。
+
+5. [报告：超过 95% 的 Omicron 病例发生在接种疫苗的人群中](https://thenationalpulse.com/2021/12/31/vaccinated-21-times-more-likely-to-get-omicron/)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip31.png)
+
+据《国家脉动》2021年12月31日电，根据德国联邦政府的一份新[报告](https://www.rki.de/DE/Content/InfAZ/N/Neuartiges_Coronavirus/Situationsberichte/Wochenbericht/Wochenbericht_2021-12-30)，德国 95.6% 的 Omicron COVID-19 变体报告病例是发生在完全接种疫苗的个体中。
+
+这篇报告—由德国机构“罗伯特·科赫研究所”（Robert Koch Institute）于12月30日发表—包括4206名感染Omicron最新变体的人；其中有4020人已经打了至少两针中共病毒（COVID-19）疫苗；在Omicron阳性群体中，28%的人还打了三针以上疫苗；只有186名感染Omicron的人没有接种中共病毒疫苗，这表明接种疫苗的人感染COVID-19变体的可能性是21倍以上，可见这是一起世界范围内的“接种疫苗病毒的大流行”。
+
+罗伯特·科赫研究所的报告还记录了近7000名Omicron检测呈阳性的人的症状，大多数人几乎没有经历任何不良反应（疫苗大流行，而非病毒大流行）:“对于6788个病例，提供了有关症状的信息，大多没有报告症状或症状轻微。124名患者住院治疗，4人死亡。”
+
+这些数据–似乎显示中共病毒（COVID19）疫苗对防止感染 Omicron 变体没有任何好处–结论基于是在制药公司在美国的游说工作达到创纪录的高水平之后，无论是在财政上还是在就业率方面。
+
+在对批评COVID-19疫苗的副作用和不良反应的人进行严厉审查的同时，《国家脉动》还披露了领先的制药巨头辉瑞公司与包括Facebook在内的社交媒体平台，以及路透社等媒体的利益冲突；这份报告也是在许多城市–包括纽约市和华盛顿特区–推出全面疫苗强制规定以防止Omicron 变种的传播之后；尽管法院阻止了这项疫苗强制措施，拜登白宫也一直在推行联邦全面疫苗任务，并提出了要求所有乘坐飞机的国内旅行者，都必须打疫苗的可能性。
+
+***发稿：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH..jpeg)
 
  
 
