--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,19 +1,29 @@
 ---
-title: 2022.1.1文贵先生警醒战友们永远牢记《新中国联邦宣言》
+title: 未接种疫苗男子感到孤独，当他所有接种疫苗的朋友都被感染
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1813148/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1813208/)
 
-撰稿：大浪小水花
-![此图像的alt属性为空；文件名为Screen-Shot-2022-01-01-at-11.49.41-AM.png](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-01-at-11.49.41-AM.png)图片来源：GETTR
-郭文贵先生在2022年元旦大直播中，再次向战友们展示了《新中国联邦宣言》。 郭先生强调《新中国联邦宣言》没有任何政治、利益、名誉之心，内容从天到地，从人到动物，从动物到植物，从植物到环境，到山到水，我们不仅说中国人的事，我们还要说全人类的事，全天下的事。
+据《babylonbee.com》，2021年12月31日报道：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-44.png)图片源自原文
+俄亥俄州克利夫兰——当地未接种疫苗的男子查克-多恩利在这个假期感到非常孤独，他所有接种疫苗的朋友现在都感染了中共病毒。
 
-郭先生向战友们展示了宣言第一页那句郝海东先生宣读的名言：“灭共是正义的需要”。郭先生指出，郝海东先生宣读宣言，是告诉世人应该向《新中国联邦宣言》一样对天地对人充满敬意和爱意。
+多恩利说：“也许我应该直接接种疫苗。然后我就会像其他人一样感染COVID，那样我和我接种过疫苗的朋友就有话可说了。现在我自己一个人感觉很健康。真是无奈！”
 
-郭先生提醒战友们永远不要忘记，我们是因为《新中国联邦宣言》走到一起。不论是谁，不论是铁血组、联盟委员会，还是战友们，谁忘记了《新中国联邦宣言》谁就一定会被淘汰。
+多恩利对记者说，几个月前，当他自己得了COVID时，他也感到被抛弃了，大家都叫他“奶奶杀手”。他希望，一旦一切恢复正常，他可以因为是克利夫兰布朗队的球迷而被冷落，而不是因为没有接种疫苗。
 
-参考链接：[https://gtv.org/broadcast/watch/61d04feaecc0b216cbb3374e](https://gtv.org/broadcast/watch/61d04feaecc0b216cbb3374e)
+原文连接：[https://babylonbee.com/news/unvaccinated-man-feeling-left-out-as-all-his-vaccinated-friends-have-covid](https://babylonbee.com/news/unvaccinated-man-feeling-left-out-as-all-his-vaccinated-friends-have-covid)
 
-校对发布：Shifter
+翻译：洛杉矶盘古农场 – TrueSky
+
+校对：洛杉矶盘古农场 – Mike Li
+
+编辑：洛杉矶盘古农场–WenXiong
+
+
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
