--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,38 +1,33 @@
 ---
-title: 马斯克计划五年内载人登陆火星
+title: 中共华为巨额资助英国顶尖大学 剑桥获利最多
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1813525/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1813600/)
 
-**整理编译：美哥**
-**编 辑：李易通**
+**撰稿：日本东京方舟农场 海星**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-53.png)
+12月30日，一篇发表在《旁观者》周刊上的报导揭露，中共华为公司资助英国多所顶尖大学，金额高达2870万英镑，其中剑桥大学获得最多资金。
 
-伊隆·马斯克说他有一个新的登陆火星的宏伟计划，时间表会比你们想象的更短。“五年内，我们登不上火星才是惊讶的事情”，周一《时代》杂志发表的SpaceX公司载人登陆火星的报道，引用了马斯克的话。
+该报导指出，英国下议院国防特别委员会的议员们在去年的一份报告中表示，华为公司与中共有着密切的联系，出于对国家安全的考虑，从2027年起禁止华为参与英国的5G网络。尽管如此，英国多所大学仍坚持与华为公司保持联系。
 
-现年50岁的马斯克是今年《时代》评定的年度人物，也是SpaceX太空探索技术公司的创始人和CEO。他的红色星球的目标十分宏伟：人类将可以在远离地球三千四百万英里的火星永久定居，并通过太阳能进行农业的无土培植，创造一个“自我供给”的城市。马斯克称：“将动物带出地球，在火星造一个‘自我供给’的城市，类似未来主义的诺亚方舟。当然我们不会只带一对动物，两只显得有点怪诞。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-7.jpg)图片来源：盖帝图像
 
-但早在2月份，亚利桑那州立大学教授，美国太空政策专家格雷格·奥特里（Greg Autry），曾透露给《商业内幕》，认为2029年之前，没有美国国家航空航天局 (NASA)的协助，马斯克估计上不去火星；其他专家也认为火星不可能有维系人类长期生存的条件。4月份马斯克自己也告诉过X奖基金会，宇航员在去火星途中就可能死亡。
+根据该报导作者Steerpike提出的信息自由申请显示，英国有九所大学从中共华为公司获得巨额资金，包括剑桥大学、牛津大学、皇家艺术学院、伦敦玛丽女王大学、卡迪夫大学、雷丁大学、约克大学、曼彻斯特以及伦敦国王学院，金额高达2870万英镑。其中剑桥大学从2016年开始至今为止获得了2570万英镑的资金，是最大的受益者。
 
-根据福布斯排行，马斯克是世界最富有的人，目前身价达2470亿美金。曾有过包括登月计划在内的一系列不切实际的时间表。2016年，马斯克推文说特斯拉将在2年内实现完全自驾；2019年，他承诺1百万辆特斯拉“机器人自驾出租车”将于次年面市；2017年成立的无聊公司，致力于在大城市钻探高速双向隧道，其项目在芝加哥被搁置，在华盛顿特区和巴尔的摩也被推迟。“准时确实不是我的人设”，马斯克在去年的财报会议上坦诚。
+该报导披露，剑桥大学在过去五年里向华为收取了31笔研究经费，总价值1830万英镑，即平均每笔59.2万英镑，最大的一笔是2018年2月的290万英镑。自2016年以来，剑桥大学还在三个不同的财政年度从华为公司处收取了740万英镑的资金。
 
-目前SpaceX公司市值1千亿美金，是当今太空商业竞争的主要玩家。四月份，SpaceX公司获得美国国家航空航天局（NASA）独家授予的宇航员登月合同，这是1972年以来的首次。马斯克告诉《时代》，火星项目赚钱对他不是必要的，最让他兴奋的是可以实现未来星球生命多样化，和“星际公民”的大目标。2002年成立的SpaceX重新定义了航天工程学持续发展的标准，是2017年首次利用回收火箭来满足美国国家航空航天局（NASA）任务的公司。预计五月也将成为史上首个实现运载宇航员穿梭空间站的私人公司。上火星显然是不易的，2008年，SpaceX曾因为一系列的火箭发射失败濒临破产。上个月马斯克还在给员工的一封信里提及：SpaceX可能将再次面临真实的破产风险。但随后马斯克澄清那封信是一种“激励策略”，称“我们不能失去优势，也不可以滋生自满。”
+今年6月，由保守党议员组成的中共国研究小组的一份报告发现，近年来，英国有20所重要大学接受了来自中共华为和国有企业超过4000万英镑的资金。
 
-SpaceX内部问题也不断。周二，前SpaceX工程师艾诗丽·科萨克（Ashley Kosak）在某杂志专栏透露她在过去四年常年被性骚扰，且称SpaceX公司“厌女症猖獗”，而马斯克对待工程师也是作为一种资源压榨，并不是作为团队来领导。根据verge网络媒体报道，至少有超过5个前员工发声提及过公司的性骚扰问题。而上个月CNBC也报道不少老员工们因为股票期权行权时间的争议而离职。
+*参考链接：*
 
-目前SpaceX公司发言人还没有回应CNBC的报道，所以更使得公众议论纷纷。
+[Revealed: Huawei’s Oxbridge millions](https://www.spectator.co.uk/article/revealed-huawei-s-oxbridge-millions)
 
-原文链接：
+* * *
 
-[https://www.cnbc.com/2021/12/15/elon-musk-surprised-if-were-not-landing-on-mars-within-five-years.html](https://www.cnbc.com/2021/12/15/elon-musk-surprised-if-were-not-landing-on-mars-within-five-years.html)
+*素材采编：海星*
 
-*发布：盘古相聚*
+*编辑：文顺*
 
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+*发布：Ranting*
 
  
 
