--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,56 +1,33 @@
 ---
-title: 中共国警告美国将在台湾问题上面临“无法承受的代价”
+title: 印尼禁止出口煤炭 中共国是其最大出口国
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1813248/)
+`日本东京方舟农场` [轉載自GNews](https://gnews.org/zh-hans/1813347/)
 
-**评论：***中国在国际上用尽各种手法孤立台湾,无论是外交施压或者是文攻武吓，然而历史趋势不可阻挡，台湾的民主越成功，国际的支持就越强。*
+**撰稿：日本东京方舟农场 老孙**
 
-据《法新社》作者：Angelos Tzortzinis 2021年12月30日报道：
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-45-e1641064513108.png)中共国外交部长王毅警告，华盛顿的干预可能导致危险局势
-图片来源：《法新社》
-**中共国外交部长王毅周四表示，美国将因其对自治岛屿台湾采取的行动而“面临无法承受的代价”，这是北京对这个自由岛屿的最新威胁。**
+据早报1月1日报道，印度尼西亚因担忧国内电力供应不足，于2022年1月起禁止煤炭出口。印尼煤炭约占中共国总进口量大约三分之二。
 
-近年来，中美之间在人权、贸易和技术竞争等问题上的紧张加剧，台湾也成为一个主要爆发点。
+印尼网络媒体Kumparan引述印尼能源部的一封信说，能源部通知所有港口将所有煤炭储存起来，以供应给国内发电厂和独立发电商（IPP）。
 
-中共国声称民主的台湾岛是自己的领土，并誓言如有必要，有一天会用武力夺取它。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2021-11-12t000000z1239403000rc2usq907543587733.jpg)印尼是全球最大的动力煤出口国。图为东加里曼丹声省的马哈坎河上，大批煤炭驳船排队等候拖船来拉动。（路透社）
 
-尽管大多数国家选择正式承认北京而不是台北，但许多国家仍与台湾保持着密切的非官方联系，中共国对此感到愤怒。
+印尼是全球最大的动力煤出口国，2020年的出口量约达4亿吨，中共国是其最大的煤炭出口国。
 
-**外交部长王毅周四在接受中共国中央电视台和官方通讯社新华社的采访时警告说，华盛顿的干预可能会导致危险的局面。**
+自从中国“制裁”澳洲之后，不得不寻求澳洲以外的煤炭来源。根据中国海关的数据显示，印尼8月份出口到中国的数量达到1700万吨，9月份达到2100万吨。
 
-王毅表示，美方违背中美建交时作出的承诺，纵容和鼓励“台独”势力，试图歪曲和空心化一个中国原则。
+目前，印尼煤炭约占中共国总进口量大约三分之二。
 
-“这不仅会让台湾陷入极其危险的境地，也会让美国付出难以承受的代价。”
+*参考链接：*
 
-美国本月早些时候邀请台湾参加其民主峰会，这是对中共国的公开奚落。
+[媒体：印尼本月禁止煤炭出口以缓解国内供应担忧](https://www.zaobao.com.sg/realtime/world/story20220101-1228570)
 
-美国总统乔·拜登上个月称台湾是“独立的”——但他后来澄清并确认美国对台湾的政策没有变化。
+* * *
 
-根据《台湾关系法案》，美国不承认台湾独立，但承诺帮助台湾自卫。
+*素材采编：老孙*
 
-北京将任何表示台湾“独立”的论述视为挑衅，并反复威胁支持台北自决的国家应当承担后果。
+*编辑：文顺*
 
-**近几个月来，中共国军方在该岛附近展开了一系列咄咄逼人的海上和空中军事行动，继上个月一群美国国会议员访问台湾后，中共国在台湾海峡附近进行了军事演习。**
-
-近年来，中共国在国际上孤立台湾，并对台湾进行政治打压。
-
-本月早些时候，尼加拉瓜的外交立场转向中共，这让台湾现在全球剩下14个盟友。
-
-文章来源：[https://news.yahoo.com/china-warns-us-face-unbearable-105844330.html](https://news.yahoo.com/china-warns-us-face-unbearable-105844330.html)
-
-翻译/评论：洛杉矶盘古农场– maru
-
-校对：洛杉矶盘古农场 – Mike Li
-
-编辑：洛杉矶盘古农场 – WenXiong
-
-发布：洛杉矶盘古农场 – 子萍
-
-
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
+*发布：Ranting*
 
  
 
