--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,33 +1,56 @@
 ---
-title: FDA警示：辉瑞的新冠病毒抗病毒药与许多常用药物联用时，会引起危及生命的反应
+title: 中共国警告美国将在台湾问题上面临“无法承受的代价”
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1813199/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1813248/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/48D3633D-4ED8-4F2E-8628-BDB317D06625_w1023_r1_s16.jpg)图片来源：大纪元
-根据美国食品和药物管理局(FDA)的说法，辉瑞(Pfizer)开发的用于治疗新冠病毒的抗病毒口服药物与包括一些抗凝剂、一些抗抑郁药和一些降胆固醇他汀类药物在内的常见药物一起使用时，可能会导致严重或危及生命的影响。
+**评论：***中国在国际上用尽各种手法孤立台湾,无论是外交施压或者是文攻武吓，然而历史趋势不可阻挡，台湾的民主越成功，国际的支持就越强。*
 
-FDA不推荐辉瑞制造的帕克斯洛维德(Paxlovid)用于患有严重肾脏或肝脏疾病的人。FDA于12月22日授予辉瑞帕克斯洛维德 (Paxlovid) 的新冠病毒治疗药紧急使用授权(EUA)，用于治疗12岁以上患者的轻度至中度新冠病毒病例。
+据《法新社》作者：Angelos Tzortzinis 2021年12月30日报道：
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-45-e1641064513108.png)中共国外交部长王毅警告，华盛顿的干预可能导致危险局势
+图片来源：《法新社》
+**中共国外交部长王毅周四表示，美国将因其对自治岛屿台湾采取的行动而“面临无法承受的代价”，这是北京对这个自由岛屿的最新威胁。**
 
-帕克斯洛维德(Paxlovid)是FDA授权治疗新冠病毒的同类口服药物中的第一种，目的是在患者因感染而病重之前减少住院的需要。帕特里齐亚·卡瓦佐尼（Patrizia Cavazzoni）表示：“随着新变种的出现，这项授权提供了一种在大流行的关键时刻对抗新冠病毒的新工具，并有望使抗病毒治疗更容易被进展为严重新冠病毒的高风险患者所接受。”卡瓦佐尼是FDA药物评价和研究中心主任。
+近年来，中美之间在人权、贸易和技术竞争等问题上的紧张加剧，台湾也成为一个主要爆发点。
 
-帕克斯洛维德(Paxlovid)由两种药物的混合物组成，第一种是尼马瑞韦，可阻止SARS-CoV-2病毒的复制，而第二种成分则用于延长尼马瑞韦的持续时间。
+中共国声称民主的台湾岛是自己的领土，并誓言如有必要，有一天会用武力夺取它。
 
-去年12月初，辉瑞宣布，在出现症状后不久服用该药丸，可使因中共病毒而住院或死亡的风险降低89%。辉瑞(Pfizer)首席执行官艾伯乐（Albert Bourla） 于12月8日告诉CNBC，该药丸已运抵美国，“因此，如果获得批准，该产品将在本月上市。”
+尽管大多数国家选择正式承认北京而不是台北，但许多国家仍与台湾保持着密切的非官方联系，中共国对此感到愤怒。
 
-**简评：**中共国制造并释放了病毒，以辉瑞制药公司为首的各疫苗公司借新冠病毒的大流行强推新冠毒疫苗，赚得盆满钵满。辉瑞制药预计其新冠疫苗将在今年为其带来360亿美元的巨额收入。现在，辉瑞制药又开始在与新冠病毒相关的治疗药物上下文章了。FDA等相关监管机构完全沦为了这些制药巨头的打工仔，放着疗效已经得到证实的伊维菌素，羟氯喹等治疗药物视而不见，对一些明显具有毒性和应用缺陷的新特药开绿灯，让全球的医疗机构都沦为了少数集团赚钱的工具。
+**外交部长王毅周四在接受中共国中央电视台和官方通讯社新华社的采访时警告说，华盛顿的干预可能会导致危险的局面。**
 
-新闻链接：[https://www.theepochtimes.com/covid-antiviral-pills-cause-life-threatening-reactions-when-used-with-many-common-meds-fda\_4186839.html](https://www.theepochtimes.com/covid-antiviral-pills-cause-life-threatening-reactions-when-used-with-many-common-meds-fda_4186839.html)
+王毅表示，美方违背中美建交时作出的承诺，纵容和鼓励“台独”势力，试图歪曲和空心化一个中国原则。
 
-* * *
+“这不仅会让台湾陷入极其危险的境地，也会让美国付出难以承受的代价。”
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+美国本月早些时候邀请台湾参加其民主峰会，这是对中共国的公开奚落。
+
+美国总统乔·拜登上个月称台湾是“独立的”——但他后来澄清并确认美国对台湾的政策没有变化。
+
+根据《台湾关系法案》，美国不承认台湾独立，但承诺帮助台湾自卫。
+
+北京将任何表示台湾“独立”的论述视为挑衅，并反复威胁支持台北自决的国家应当承担后果。
+
+**近几个月来，中共国军方在该岛附近展开了一系列咄咄逼人的海上和空中军事行动，继上个月一群美国国会议员访问台湾后，中共国在台湾海峡附近进行了军事演习。**
+
+近年来，中共国在国际上孤立台湾，并对台湾进行政治打压。
+
+本月早些时候，尼加拉瓜的外交立场转向中共，这让台湾现在全球剩下14个盟友。
+
+文章来源：[https://news.yahoo.com/china-warns-us-face-unbearable-105844330.html](https://news.yahoo.com/china-warns-us-face-unbearable-105844330.html)
+
+翻译/评论：洛杉矶盘古农场– maru
+
+校对：洛杉矶盘古农场 – Mike Li
+
+编辑：洛杉矶盘古农场 – WenXiong
+
+发布：洛杉矶盘古农场 – 子萍
 
 
-编辑：【英国伦敦喜庄园编辑部】
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+[https://discord.gg/2vuvRm7z6U](https://discord.gg/2vuvRm7z6U)
 
  
 
