--- a/gnews/41.md
+++ b/gnews/41.md
@@ -1,47 +1,38 @@
 ---
-title: 我的亲身经历（一）——初进监狱
+title: 刘亚洲被抓是以共灭共战役中的一个里程碑！
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1811574/)
+`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/1811863/)
 
-作者：香草山文艺部-5月10日NB
-![](https://assets.gnews.org/wp-content/uploads/2021/11/Screen-Shot-2021-08-30-at-7.37.59-PM-1.png)
-作为一个国内普通草根，我在生活中到处都能碰到、看到共产党统治下以黑治国的种种恶行。下面是我自己的一段亲身经历。
+作者：香草山信息部 6zero4
+![](https://assets.gnews.org/wp-content/uploads/2021/12/GTV-Gnews-4.png)
+郭先生在最近的大直播里谈到，中共元老李先念女婿、空军上将刘亚洲前不久被抓事件在党内持续发酵，其同时被抓的亲人就有四十几个，现在又抓了几百个，空军老部下也抓了400多人，并涉及其军方老上级、现任军委副主席许其亮。
 
-3年前，因为受到牵连，我被冤判入狱，在监狱的日子对我来说就是经历了一场噩梦。在布满铁丝网的高墙里，令人无法想象的黑暗让我刻骨铭心。我先说一说刚刚入狱时碰到的一个情景。
+刘亚洲不是一般的中共党员，此人是有脑子的共产党员，不仅有女婿帮的傲慢，还见多识广，当然他也不是什么好人，只是坏人中有见解的一个人。刘亚洲有很多经典谈话，其中谈到中国人的三大邪恶：第一，中国人天下没有不吃的东西，而且绝对是天下最邪恶的吃法，这对大自然生态链的毁坏无法想象：第二，中国永远由一帮傻子、骗子、暴徒当官，永远被最坏、最笨的人统治，这是中国人的悲哀；第三，中国人没有信仰到了不可理喻的地步，对“文明”两字完全没有概念，中国人不但没有创造文明，简直是在扼杀文明。刘亚洲被抓进去后就这三个问题的来源被一问再问，被问到奔溃要自杀！
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Capture26-1.jpg)
+刘亚洲在习上台时与另一位太子党出身的上将、前中共国家主席刘少奇的儿子刘源都是挺习的两员军方干将，冒着全家生命财产危险鼎立助习根除军方异己，即时任军委副主席徐才厚和郭伯雄、总参谋长房峰辉、整个总后勤部领导班子等超重量级实权人物。习当时答应刘亚洲最起码将被提升为国防部长，很可能任总后勤部长，甚至进入权力取代了政治局常委的国安委，但习最后彻底食言。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/未命名的设计-2.jpg)
+曾经拍习的马屁以图个好职务的刘亚洲最后啥羹也没分到，因此转向跟随曾庆红、王岐山和孟建柱，这应该是习对其下手的原因之一。同时，才疏学浅、打着“包青天”旗子反腐将自己推上“包子帝”皇位的习，认为有见解有才华的党内高层人士对自己的帝位构成了巨大威胁，因此习一直耿耿于怀并不断根除这些威胁。可见中共一向卸磨杀驴、用完即弃的邪恶本质。
 
-被刑事判决后的罪犯入狱后有两个月的入监培训期，这两个月的日子是非常恐怖的。
+刘亚洲被抓前见了至少100人，倒数第二人是太子党大哥曾庆红，最后一人是女婿帮老大王岐山，这两人现在都对刘亚洲被抓事件毫不回避、誓死相保，说党内专门有绝对不抓党的创始股东及其家人的规矩，且刘亚洲这事在党内、国内、国际影响巨大。习回复说刘亚洲是女婿，当时规矩定的是直系亲属，不含女婿。王岐山说：“不，我就是女婿，岳父姚依林说王岐山同志是被党内保护的人”。自己的左膀右臂董宏、任志强、康典、陈峰等被抓都不出面说话的王岐山以女婿说女婿，力保刘亚洲的事情非同小可，这会是反习派从地下游击战转入地面阵地战的开始吗？
 
-新犯们在这两个月的活动区域叫入监警区。入狱第一天，狱警对新犯人的训话让我记忆非常深刻。训话的警察是入监警区的指导员，他有几句话是这样说的：“你们从现在开始什么身份都没有，只有编号，名称是犯人。你们不要想有尊严，这里没有公平，你们只有无条件地服从。无论在社会上你们地位多高，势力多大，在这个地方你们都要牢牢记住，我们是有执照的流氓，有的是手段对付你们。你们如果违反监规，轻的是电警棍辣椒水老虎凳等着你，重的要么关禁闭室，要么戴三十斤以上的镣铐，要么加刑期。你们随时随地都不许忘记自己是谁，和警察讲话必须说自己是罪犯XXX，和警察说话时必须蹲下。每个新犯人都要体验半个小时的坐老虎凳、尝电警棍和尝辣椒水。要让你们知道共产党铁拳的分量。”
+这场闹剧本质上是中共内斗白热化的升级版，是习全速倒车搞毛贼东清除党内异己那一套的翻版。只是没有毛的份量与水平的习，其手段太过明显和粗糙，让党内不但异己分子，连稍显温和的共青团派系甚至同根同祖的太子党派系，都认识到了习是要消灭除习家以外的任何势力，以安心做终身皇帝，讲“党天下”变成“习天下”吃独食的本质问题。当下中共党内习家与外人之间已不是利益之争，而是生死之战！后续双方的厮杀必将更加血雨腥风、天昏地暗，以共灭共到了天时、地利、人和的关键节点！
 
-他说这些话时脸上没有任何表情，口气也是文绉绉的，但是能让人感到一股杀气。我能感觉到犯人听着是很恐惧的，要知道这才是犯人恐怖日子的开始啊。因为这不是影视剧的场景，这些警察是说到做到的，而且会做到极致。
+参考来源：[https://gtv.org/video/id=61cc5dbdecc0b216cbb1147d](https://gtv.org/video/id=61cc5dbdecc0b216cbb1147d)
 
-在监狱期间，我亲眼看到过、体会过犯人每时每刻都处于这种令人绝望的所谓共产党铁拳的威力之下，每个犯人在监狱里度过刑期出狱后，都像被抽过筋一样麻木。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2c3ff12a-1aad-413c-bcbf-f68f4a054055-2.jpg)
 
-郭文贵先生说中国共产党以黑治国，我体会得太深刻了，仅监狱的黑暗就可见一斑。郭文贵先生讲述的在清丰看守所的经历我能感同身受。
-
-现在各个省份都在兴建监狱，省级监狱达万人规模（刑期5年以上），市级监狱也要容纳几千人。看守所的规模也在扩大。我曾听狱警说过，当前从看守所送监的犯人都在排队等着，监狱太少了，以后犯人还会更多，现有的监狱已经容纳不了了。
-
-真不知未来是怎样的一幅恐怖景象。
-
-（未完待续）
-
-校对/发稿：飞虹
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/6acb4e3f-0990-4c36-b2c0-2c41dca00878.jpg)
+编辑/校对/发稿：Hetangyuese
 
 **更多资讯，更多关注**
+[**纽约香草山农场 GTV–香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场 GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
-[**纽约香草山农场GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+![](https://assets.gnews.org/wp-content/uploads/2021/10/Gnews-Logo-36-1.png)
 
-[**纽约香草山农场GTV-MOS TALK**** ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 You****Tube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 ****Discord**](https://discord.gg/ChqXAHd)
 
  
 
